commit bilingual contents

--- a/docs/visual-basic/misc/bc30015.md
+++ b/docs/visual-basic/misc/bc30015.md
@@ -1,5 +1,5 @@
 ---
-title: Eredita da ' System. <classname>' non è valido
+title: Eredità da' System. <classname> ' non è valido
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30015
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30015
 ms.assetid: b4c005df-a510-47c7-b5cc-27f4514d32b6
-ms.openlocfilehash: 1ccfd4e380be83183e8e8ea2f9227691e8d4aeb5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b0dcb65e0a0eb4e06078ebcb70a732acdc30ec4d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651871"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366827"
 ---
-# <a name="inheriting-from-systemclassname-is-not-valid"></a><span data-ttu-id="f5dd2-103">Eredita da ' System. \<NomeClasse >' non è valido</span><span class="sxs-lookup"><span data-stu-id="f5dd2-103">Inheriting from 'System.\<classname>' is not valid</span></span>
-<span data-ttu-id="f5dd2-104">Una classe non può derivare da `System.Array`, `System.Delegate`, `System.Enum`o `System.ValueType`.</span><span class="sxs-lookup"><span data-stu-id="f5dd2-104">A class cannot inherit from `System.Array`, `System.Delegate`, `System.Enum`, or `System.ValueType`.</span></span>  
+# <a name="inheriting-from-systemclassname-is-not-valid"></a><span data-ttu-id="81092-103">Eredità da' System. \<classname> '</span><span class="sxs-lookup"><span data-stu-id="81092-103">Inheriting from 'System.\<classname>'</span></span> <span data-ttu-id="81092-104">non è valido</span><span class="sxs-lookup"><span data-stu-id="81092-104">is not valid</span></span>
+<span data-ttu-id="81092-105">Una classe non può derivare da `System.Array`, `System.Delegate`, `System.Enum`o `System.ValueType`.</span><span class="sxs-lookup"><span data-stu-id="81092-105">A class cannot inherit from `System.Array`, `System.Delegate`, `System.Enum`, or `System.ValueType`.</span></span>  
   
- <span data-ttu-id="f5dd2-105">**ID errore:** BC30015</span><span class="sxs-lookup"><span data-stu-id="f5dd2-105">**Error ID:** BC30015</span></span>  
+ <span data-ttu-id="81092-106">**ID errore:** BC30015</span><span class="sxs-lookup"><span data-stu-id="81092-106">**Error ID:** BC30015</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f5dd2-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f5dd2-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="81092-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="81092-107">To correct this error</span></span>  
   
-- <span data-ttu-id="f5dd2-107">Rimuovere l'istruzione `Inherits` o modificarla in modo che derivi da una classe base valida.</span><span class="sxs-lookup"><span data-stu-id="f5dd2-107">Remove the `Inherits` statement or change it to inherit from a valid base class.</span></span>  
+- <span data-ttu-id="81092-108">Rimuovere l'istruzione `Inherits` o modificarla in modo che derivi da una classe base valida.</span><span class="sxs-lookup"><span data-stu-id="81092-108">Remove the `Inherits` statement or change it to inherit from a valid base class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f5dd2-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f5dd2-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="81092-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="81092-109">See also</span></span>
 
-- [<span data-ttu-id="f5dd2-109">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="f5dd2-109">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [<span data-ttu-id="f5dd2-110">Dichiarazione di variabili oggetto</span><span class="sxs-lookup"><span data-stu-id="f5dd2-110">Object Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/object-variable-declaration.md)
+- [<span data-ttu-id="81092-110">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="81092-110">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="81092-111">Dichiarazione di variabili oggetto</span><span class="sxs-lookup"><span data-stu-id="81092-111">Object Variable Declaration</span></span>](../programming-guide/language-features/variables/object-variable-declaration.md)
