--- a/docs/visual-basic/misc/bc30760.md
+++ b/docs/visual-basic/misc/bc30760.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30760
 ms.assetid: 7e792fd8-2880-402b-a908-c89e5b028300
-ms.openlocfilehash: e36e81a9ced0c69031d8810813a0cc0310df1611
-ms.sourcegitcommit: 68653db98c5ea7744fd438710248935f70020dfb
+ms.openlocfilehash: fce5dcd4070f22d73bc18d83821719de1d40769a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/22/2019
-ms.locfileid: "69933875"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361502"
 ---
-# <a name="referenced-object-has-a-value-of-nothing"></a><span data-ttu-id="aeca6-102">L'oggetto a cui si fa riferimento ha valore 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="aeca6-102">Referenced object has a value of 'Nothing'</span></span>
-<span data-ttu-id="aeca6-103">L'oggetto usato ha valore `Nothing`, mentre è previsto un valore utilizzabile.</span><span class="sxs-lookup"><span data-stu-id="aeca6-103">The object being used has the value `Nothing`, but a usable value is expected.</span></span> <span data-ttu-id="aeca6-104">`Nothing` indica che un oggetto non ha alcun valore. All'oggetto potrebbe non essere stato assegnato alcun valore o potrebbe essere stato assegnato il valore `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="aeca6-104">`Nothing` is a value that indicates that an object has no value, either because no value has been assigned to it, or it was assigned the value `Nothing`.</span></span>  
+# <a name="referenced-object-has-a-value-of-nothing"></a><span data-ttu-id="cedb8-102">L'oggetto a cui si fa riferimento ha valore 'Nothing'</span><span class="sxs-lookup"><span data-stu-id="cedb8-102">Referenced object has a value of 'Nothing'</span></span>
+<span data-ttu-id="cedb8-103">L'oggetto usato ha valore `Nothing`, mentre è previsto un valore utilizzabile.</span><span class="sxs-lookup"><span data-stu-id="cedb8-103">The object being used has the value `Nothing`, but a usable value is expected.</span></span> <span data-ttu-id="cedb8-104">`Nothing` indica che un oggetto non ha alcun valore. All'oggetto potrebbe non essere stato assegnato alcun valore o potrebbe essere stato assegnato il valore `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="cedb8-104">`Nothing` is a value that indicates that an object has no value, either because no value has been assigned to it, or it was assigned the value `Nothing`.</span></span>  
   
- <span data-ttu-id="aeca6-105">**ID errore:** BC30760</span><span class="sxs-lookup"><span data-stu-id="aeca6-105">**Error ID:** BC30760</span></span>  
+ <span data-ttu-id="cedb8-105">**ID errore:** BC30760</span><span class="sxs-lookup"><span data-stu-id="cedb8-105">**Error ID:** BC30760</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="aeca6-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="aeca6-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cedb8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cedb8-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="aeca6-107">Controllare l'oggetto per verificare che sia stato dichiarato nell'ambito della routine in cui si è verificato l'errore.</span><span class="sxs-lookup"><span data-stu-id="aeca6-107">Check the object to make sure it has been declared within the scope of the procedure where the error occurred.</span></span>  
+1. <span data-ttu-id="cedb8-107">Controllare l'oggetto per verificare che sia stato dichiarato nell'ambito della routine in cui si è verificato l'errore.</span><span class="sxs-lookup"><span data-stu-id="cedb8-107">Check the object to make sure it has been declared within the scope of the procedure where the error occurred.</span></span>  
   
-2. <span data-ttu-id="aeca6-108">Verificare che il valore dell'oggetto sia stato impostato.</span><span class="sxs-lookup"><span data-stu-id="aeca6-108">Verify that the value of the object is being set.</span></span>  
+2. <span data-ttu-id="cedb8-108">Verificare che il valore dell'oggetto sia stato impostato.</span><span class="sxs-lookup"><span data-stu-id="cedb8-108">Verify that the value of the object is being set.</span></span>  
   
     > [!NOTE]
-    > <span data-ttu-id="aeca6-109">Il valore `Nothing` non corrisponde a zero o a una stringa vuota.</span><span class="sxs-lookup"><span data-stu-id="aeca6-109">The value `Nothing` is not the same as zero or an empty string.</span></span> <span data-ttu-id="aeca6-110">Per verificare se un oggetto contiene il valore `IsNothing` è possibile usare `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="aeca6-110">You can use `IsNothing` to check to see if an object contains the value `Nothing`.</span></span>  
+    > <span data-ttu-id="cedb8-109">Il valore `Nothing` non corrisponde a zero o a una stringa vuota.</span><span class="sxs-lookup"><span data-stu-id="cedb8-109">The value `Nothing` is not the same as zero or an empty string.</span></span> <span data-ttu-id="cedb8-110">Per verificare se un oggetto contiene il valore `IsNothing` è possibile usare `Nothing`.</span><span class="sxs-lookup"><span data-stu-id="cedb8-110">You can use `IsNothing` to check to see if an object contains the value `Nothing`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="aeca6-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="aeca6-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="cedb8-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cedb8-111">See also</span></span>
 
-- [<span data-ttu-id="aeca6-112">Nothing</span><span class="sxs-lookup"><span data-stu-id="aeca6-112">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
+- [<span data-ttu-id="cedb8-112">Nothing</span><span class="sxs-lookup"><span data-stu-id="cedb8-112">Nothing</span></span>](../language-reference/nothing.md)
