--- a/docs/visual-basic/misc/bc30980.md
+++ b/docs/visual-basic/misc/bc30980.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre il tipo di ' <variablename>' da un'espressione contenente ' <variablename>'
+title: <variablename>Non è possibile dedurre il tipo di '' da un'espressione contenente ' <variablename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30980
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC30980
 ms.assetid: 43a5d008-5362-481b-845b-b9bb00a61a83
-ms.openlocfilehash: 415960a84e5dfdd977eff7a9368c721106ebf3a6
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: eedf01e1a29f5165f686893d6a73e4cbaf2a36d7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352623"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399813"
 ---
-# <a name="type-of-variablename-cannot-be-inferred-from-an-expression-containing-variablename"></a><span data-ttu-id="16e74-102">Non è possibile dedurre il tipo di ' \<variablename >' da un'espressione contenente ' \<variablename >'</span><span class="sxs-lookup"><span data-stu-id="16e74-102">Type of '\<variablename>' cannot be inferred from an expression containing '\<variablename>'</span></span>
-<span data-ttu-id="16e74-103">Il compilatore non può dedurre il tipo di dati di una variabile se la variabile viene usata per stabilire il relativo valore iniziale nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="16e74-103">The compiler cannot infer the data type of a variable if the variable is used in establishing its initial value in the declaration.</span></span>  
+# <a name="type-of-variablename-cannot-be-inferred-from-an-expression-containing-variablename"></a><span data-ttu-id="f173c-102">\<variablename>Non è possibile dedurre il tipo di '' da un'espressione contenente ' \<variablename> '</span><span class="sxs-lookup"><span data-stu-id="f173c-102">Type of '\<variablename>' cannot be inferred from an expression containing '\<variablename>'</span></span>
+<span data-ttu-id="f173c-103">Il compilatore non può dedurre il tipo di dati di una variabile se la variabile viene usata per stabilire il relativo valore iniziale nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="f173c-103">The compiler cannot infer the data type of a variable if the variable is used in establishing its initial value in the declaration.</span></span>  
   
- <span data-ttu-id="16e74-104">Ad esempio, con `Option Infer` impostato su `On`, negli esempi seguenti non vengono compilati:</span><span class="sxs-lookup"><span data-stu-id="16e74-104">For example, with `Option Infer` set to `On`, the following examples do not compile:</span></span>  
+ <span data-ttu-id="f173c-104">Ad esempio, con `Option Infer` impostato su `On`, negli esempi seguenti non vengono compilati:</span><span class="sxs-lookup"><span data-stu-id="f173c-104">For example, with `Option Infer` set to `On`, the following examples do not compile:</span></span>  
   
-- <span data-ttu-id="16e74-105">Dichiarazioni</span><span class="sxs-lookup"><span data-stu-id="16e74-105">Declarations</span></span>  
+- <span data-ttu-id="f173c-105">Dichiarazioni</span><span class="sxs-lookup"><span data-stu-id="f173c-105">Declarations</span></span>  
   
     ```vb  
     ' Does not compile with Option Infer on.  
@@ -27,7 +27,7 @@ ms.locfileid: "71352623"
     Dim d = someFunction(d)  
     ```  
   
-- <span data-ttu-id="16e74-106">Ciclo`For`</span><span class="sxs-lookup"><span data-stu-id="16e74-106">`For` loop</span></span>  
+- <span data-ttu-id="f173c-106">Ciclo`For`</span><span class="sxs-lookup"><span data-stu-id="f173c-106">`For` loop</span></span>  
   
     ```vb  
     ' Does not compile with Option Infer on.  
@@ -35,7 +35,7 @@ ms.locfileid: "71352623"
     Next  
     ```  
   
-- <span data-ttu-id="16e74-107">Ciclo`For Each`</span><span class="sxs-lookup"><span data-stu-id="16e74-107">`For Each` loop</span></span>  
+- <span data-ttu-id="f173c-107">Ciclo`For Each`</span><span class="sxs-lookup"><span data-stu-id="f173c-107">`For Each` loop</span></span>  
   
     ```vb  
     ' Does not compile with Option Infer on.  
@@ -43,20 +43,20 @@ ms.locfileid: "71352623"
     Next  
     ```  
   
- <span data-ttu-id="16e74-108">**ID errore:** BC30980</span><span class="sxs-lookup"><span data-stu-id="16e74-108">**Error ID:** BC30980</span></span>  
+ <span data-ttu-id="f173c-108">**ID errore:** BC30980</span><span class="sxs-lookup"><span data-stu-id="f173c-108">**Error ID:** BC30980</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="16e74-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="16e74-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f173c-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f173c-109">To correct this error</span></span>  
   
-- <span data-ttu-id="16e74-110">Se le due variabili devono riferirsi a valori diversi, modificare il nome della variabile che si sta dichiarando.</span><span class="sxs-lookup"><span data-stu-id="16e74-110">If the two variables were intended to refer to different values, change the name of the variable that you are declaring.</span></span>  
+- <span data-ttu-id="f173c-110">Se le due variabili devono riferirsi a valori diversi, modificare il nome della variabile che si sta dichiarando.</span><span class="sxs-lookup"><span data-stu-id="f173c-110">If the two variables were intended to refer to different values, change the name of the variable that you are declaring.</span></span>  
   
-- <span data-ttu-id="16e74-111">Usare un valore letterale invece del nome della variabile nel valore iniziale, a destra dell'assegnazione.</span><span class="sxs-lookup"><span data-stu-id="16e74-111">Use a literal value instead of the variable name in the initial value, on the right side of the assignment.</span></span>  
+- <span data-ttu-id="f173c-111">Usare un valore letterale invece del nome della variabile nel valore iniziale, a destra dell'assegnazione.</span><span class="sxs-lookup"><span data-stu-id="f173c-111">Use a literal value instead of the variable name in the initial value, on the right side of the assignment.</span></span>  
   
-- <span data-ttu-id="16e74-112">Usare una clausola `As` per specificare il tipo di variabile che si sta dichiarando.</span><span class="sxs-lookup"><span data-stu-id="16e74-112">Use an `As` clause to specify the type of the variable you are declaring.</span></span>  
+- <span data-ttu-id="f173c-112">Usare una clausola `As` per specificare il tipo di variabile che si sta dichiarando.</span><span class="sxs-lookup"><span data-stu-id="f173c-112">Use an `As` clause to specify the type of the variable you are declaring.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="16e74-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="16e74-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f173c-113">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f173c-113">See also</span></span>
 
-- [<span data-ttu-id="16e74-114">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="16e74-114">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="16e74-115">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="16e74-115">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)
-- [<span data-ttu-id="16e74-116">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="16e74-116">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [<span data-ttu-id="16e74-117">Inferenza del tipo di variabile locale</span><span class="sxs-lookup"><span data-stu-id="16e74-117">Local Type Inference</span></span>](../../visual-basic/programming-guide/language-features/variables/local-type-inference.md)
-- [<span data-ttu-id="16e74-118">Istruzione Option Infer</span><span class="sxs-lookup"><span data-stu-id="16e74-118">Option Infer Statement</span></span>](../../visual-basic/language-reference/statements/option-infer-statement.md)
+- [<span data-ttu-id="f173c-114">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="f173c-114">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="f173c-115">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="f173c-115">For Each...Next Statement</span></span>](../language-reference/statements/for-each-next-statement.md)
+- [<span data-ttu-id="f173c-116">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="f173c-116">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="f173c-117">Inferenza del tipo di variabile locale</span><span class="sxs-lookup"><span data-stu-id="f173c-117">Local Type Inference</span></span>](../programming-guide/language-features/variables/local-type-inference.md)
+- [<span data-ttu-id="f173c-118">Option Infer (istruzione)</span><span class="sxs-lookup"><span data-stu-id="f173c-118">Option Infer Statement</span></span>](../language-reference/statements/option-infer-statement.md)
