--- a/docs/visual-basic/misc/bc42317.md
+++ b/docs/visual-basic/misc/bc42317.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro di tipo del commento XML <parameter> non corrisponde a un parametro di tipo corrispondente <keyword> istruzione
+title: Il parametro di tipo <parameter> del commento XML non corrisponde a un parametro di tipo nell'istruzione <keyword> corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42317
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC42317
 ms.assetid: 53b5425d-2f73-4488-b90b-adb1835307c9
-ms.openlocfilehash: 549f3cced0df62ef93ee016fc3581370617926a5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9c4e2ed2e85177534d0eaa37e6544075a9632d8f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604318"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400939"
 ---
-# <a name="xml-comment-type-parameter-parameter-does-not-match-a-type-parameter-on-the-corresponding-keyword-statement"></a><span data-ttu-id="2923d-102">Parametro di tipo del commento XML \<parametro > non corrisponde a un parametro di tipo corrispondente \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="2923d-102">XML comment type parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement</span></span>
-<span data-ttu-id="2923d-103">Il parametro del commento XML \<parametro > non corrisponde a un parametro di tipo corrispondente \<parola chiave > istruzione.</span><span class="sxs-lookup"><span data-stu-id="2923d-103">XML comment parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="2923d-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="2923d-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-type-parameter-parameter-does-not-match-a-type-parameter-on-the-corresponding-keyword-statement"></a><span data-ttu-id="e6488-102">Il parametro di tipo \<parameter> del commento XML non corrisponde a un parametro di tipo nell'istruzione \<keyword> corrispondente</span><span class="sxs-lookup"><span data-stu-id="e6488-102">XML comment type parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement</span></span>
+<span data-ttu-id="e6488-103">Il parametro del commento XML non \<parameter> corrisponde a un parametro di tipo nell' \<keyword> istruzione corrispondente.</span><span class="sxs-lookup"><span data-stu-id="e6488-103">XML comment parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="e6488-104">Il commento XML verrà ignorato.</span><span class="sxs-lookup"><span data-stu-id="e6488-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="2923d-105">Un tag di commenti XML è stato specificato per alcuni, ma non per tutti, i parametri di tipi in un metodo.</span><span class="sxs-lookup"><span data-stu-id="2923d-105">An XML comment tag was specified for some, but not all, type parameters in a method.</span></span>  
+ <span data-ttu-id="e6488-105">Un tag di commenti XML è stato specificato per alcuni, ma non per tutti, i parametri di tipi in un metodo.</span><span class="sxs-lookup"><span data-stu-id="e6488-105">An XML comment tag was specified for some, but not all, type parameters in a method.</span></span>  
   
- <span data-ttu-id="2923d-106">**ID errore:** BC42317</span><span class="sxs-lookup"><span data-stu-id="2923d-106">**Error ID:** BC42317</span></span>  
+ <span data-ttu-id="e6488-106">**ID errore:** BC42317</span><span class="sxs-lookup"><span data-stu-id="e6488-106">**Error ID:** BC42317</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2923d-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2923d-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e6488-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e6488-107">To correct this error</span></span>  
   
-- <span data-ttu-id="2923d-108">Specificare i tag di commento XML per tutti i parametri di tipo nel metodo.</span><span class="sxs-lookup"><span data-stu-id="2923d-108">Provide XML comment tags for all type parameters in the method.</span></span>  
+- <span data-ttu-id="e6488-108">Specificare i tag di commento XML per tutti i parametri di tipo nel metodo.</span><span class="sxs-lookup"><span data-stu-id="e6488-108">Provide XML comment tags for all type parameters in the method.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2923d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2923d-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e6488-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e6488-109">See also</span></span>
 
-- [<span data-ttu-id="2923d-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="2923d-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)
-- [<span data-ttu-id="2923d-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="2923d-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [<span data-ttu-id="e6488-110">Tag di commento XML</span><span class="sxs-lookup"><span data-stu-id="e6488-110">XML Comment Tags</span></span>](../language-reference/xmldoc/index.md)
+- [<span data-ttu-id="e6488-111">Documentazione del codice tramite XML</span><span class="sxs-lookup"><span data-stu-id="e6488-111">Documenting Your Code with XML</span></span>](../programming-guide/program-structure/documenting-your-code-with-xml.md)
