--- a/docs/visual-basic/misc/bc2033.md
+++ b/docs/visual-basic/misc/bc2033.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC2033
 ms.assetid: e921b34a-1ab3-4ba0-81b3-e45c62de4718
-ms.openlocfilehash: 9f8e748245e2ac6b8d67ea8915c95bba8e3b6649
-ms.sourcegitcommit: 559259da2738a7b33a46c0130e51d336091c2097
+ms.openlocfilehash: aa1b249529f8815e5e52f7abf95c3d4973c080c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/22/2019
-ms.locfileid: "72775381"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401316"
 ---
-# <a name="error-embedding-win32-manifest-option-win32manifest-conflicts-with-nowin32manifest"></a><span data-ttu-id="f5352-102">Si è verificato un errore durante l'incorporamento del manifesto Win32: l'opzione /win32manifest è in conflitto con /nowin32manifest</span><span class="sxs-lookup"><span data-stu-id="f5352-102">Error embedding Win32 manifest: Option /win32manifest conflicts with /nowin32manifest</span></span>
-<span data-ttu-id="f5352-103">Al compilatore Visual Basic è stata passata un'opzione `/win32manifest` del compilatore e un'opzione `/nowin32manifest` del compilatore.</span><span class="sxs-lookup"><span data-stu-id="f5352-103">The Visual Basic compiler has been passed both a `/win32manifest` compiler option and a `/nowin32manifest` compiler option.</span></span> <span data-ttu-id="f5352-104">Solo una di queste opzioni può essere passata al compilatore di Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="f5352-104">Only one of these options can be passed to the Visual Basic compiler.</span></span>  
+# <a name="error-embedding-win32-manifest-option-win32manifest-conflicts-with-nowin32manifest"></a><span data-ttu-id="e7545-102">Si è verificato un errore durante l'incorporamento del manifesto Win32: l'opzione /win32manifest è in conflitto con /nowin32manifest</span><span class="sxs-lookup"><span data-stu-id="e7545-102">Error embedding Win32 manifest: Option /win32manifest conflicts with /nowin32manifest</span></span>
+<span data-ttu-id="e7545-103">Al compilatore Visual Basic è stata passata un'opzione `/win32manifest` del compilatore e un'opzione `/nowin32manifest` del compilatore.</span><span class="sxs-lookup"><span data-stu-id="e7545-103">The Visual Basic compiler has been passed both a `/win32manifest` compiler option and a `/nowin32manifest` compiler option.</span></span> <span data-ttu-id="e7545-104">Solo una di queste opzioni può essere passata al compilatore di Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="e7545-104">Only one of these options can be passed to the Visual Basic compiler.</span></span>  
   
- <span data-ttu-id="f5352-105">**ID errore:** BC2033</span><span class="sxs-lookup"><span data-stu-id="f5352-105">**Error ID:** BC2033</span></span>  
+ <span data-ttu-id="e7545-105">**ID errore:** BC2033</span><span class="sxs-lookup"><span data-stu-id="e7545-105">**Error ID:** BC2033</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f5352-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f5352-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e7545-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e7545-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="f5352-107">Rimuovere l'opzione `/win32manifest` del compilatore o l'opzione `/nowin32manifest` del compilatore.</span><span class="sxs-lookup"><span data-stu-id="f5352-107">Remove either the `/win32manifest` compiler option or the `/nowin32manifest` compiler option.</span></span>  
+1. <span data-ttu-id="e7545-107">Rimuovere l'opzione `/win32manifest` del compilatore o l'opzione `/nowin32manifest` del compilatore.</span><span class="sxs-lookup"><span data-stu-id="e7545-107">Remove either the `/win32manifest` compiler option or the `/nowin32manifest` compiler option.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f5352-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f5352-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e7545-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e7545-108">See also</span></span>
 
-- [<span data-ttu-id="f5352-109">-win32manifest (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="f5352-109">-win32manifest (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/win32manifest.md)
-- [<span data-ttu-id="f5352-110">-nowin32manifest (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="f5352-110">-nowin32manifest (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/nowin32manifest.md)
-- [<span data-ttu-id="f5352-111">Compilatore della riga di comando di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="f5352-111">Visual Basic Command-Line Compiler</span></span>](../../visual-basic/reference/command-line-compiler/index.md)
+- [<span data-ttu-id="e7545-109">-win32manifest (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="e7545-109">-win32manifest (Visual Basic)</span></span>](../reference/command-line-compiler/win32manifest.md)
+- [<span data-ttu-id="e7545-110">-nowin32manifest (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="e7545-110">-nowin32manifest (Visual Basic)</span></span>](../reference/command-line-compiler/nowin32manifest.md)
+- [<span data-ttu-id="e7545-111">Compilatore della riga di comando di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e7545-111">Visual Basic Command-Line Compiler</span></span>](../reference/command-line-compiler/index.md)
