--- a/docs/visual-basic/misc/bc30111.md
+++ b/docs/visual-basic/misc/bc30111.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo di interfaccia e non può essere usato come espressione"
+title: "' <typename> ' è un tipo di interfaccia e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30111
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30111
 ms.assetid: 94b9cc47-11bc-4b88-b379-6cf0a3660777
-ms.openlocfilehash: 9e8432af533700d86291c4d2183b922372324ffc
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 99f0b65655fb1d2505a78429d2c5d9e3a7ff1670
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642643"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400008"
 ---
-# <a name="typename-is-an-interface-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="e909a-102">'\<nomeTipo >' è un tipo di interfaccia e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="e909a-102">'\<typename>' is an interface type and cannot be used as an expression</span></span>
-<span data-ttu-id="e909a-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="e909a-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="e909a-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="e909a-104">An expression must consist of a combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
+# <a name="typename-is-an-interface-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="d4950-102">' \<typename> ' è un tipo di interfaccia e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="d4950-102">'\<typename>' is an interface type and cannot be used as an expression</span></span>
+<span data-ttu-id="d4950-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="d4950-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="d4950-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="d4950-104">An expression must consist of a combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
   
- <span data-ttu-id="e909a-105">**ID errore:** BC30111</span><span class="sxs-lookup"><span data-stu-id="e909a-105">**Error ID:** BC30111</span></span>  
+ <span data-ttu-id="d4950-105">**ID errore:** BC30111</span><span class="sxs-lookup"><span data-stu-id="d4950-105">**Error ID:** BC30111</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e909a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e909a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d4950-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d4950-106">To correct this error</span></span>  
   
-- <span data-ttu-id="e909a-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="e909a-107">Remove the type name and construct the expression using valid elements.</span></span>  
+- <span data-ttu-id="d4950-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="d4950-107">Remove the type name and construct the expression using valid elements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e909a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e909a-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d4950-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d4950-108">See also</span></span>
 
-- [<span data-ttu-id="e909a-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="e909a-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [<span data-ttu-id="d4950-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="d4950-109">Operators and Expressions</span></span>](../programming-guide/language-features/operators-and-expressions/index.md)
