--- a/docs/visual-basic/misc/bc30408.md
+++ b/docs/visual-basic/misc/bc30408.md
@@ -1,5 +1,5 @@
 ---
-title: Metodo '<methodname>'non ha la stessa firma del delegato'<delegatename>'
+title: Il metodo ' <methodname> ' non ha la stessa firma del delegato ' <delegatename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30408
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30408
 ms.assetid: 845f6686-388f-4253-b635-146e517015a1
-ms.openlocfilehash: cc1792ae32d04d86d71632be0626e3a936e300e7
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1de0fe458acf64ef11b0121de4ae57643527978b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649847"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84362048"
 ---
-# <a name="method-methodname-does-not-have-the-same-signature-as-delegate-delegatename"></a><span data-ttu-id="cbc16-102">Metodo '\<NomeMetodo >' non ha la stessa firma del delegato '\<NomeDelegato >'</span><span class="sxs-lookup"><span data-stu-id="cbc16-102">Method '\<methodname>' does not have the same signature as delegate '\<delegatename>'</span></span>
-<span data-ttu-id="cbc16-103">Le firme del metodo e del delegato che si sta cercando di usare non corrispondono.</span><span class="sxs-lookup"><span data-stu-id="cbc16-103">There is a mismatch between the signatures of the method and delegate you are attempting to use.</span></span> <span data-ttu-id="cbc16-104">L'istruzione `Delegate` definisce i tipi di parametro e i tipi restituiti di una classe delegata.</span><span class="sxs-lookup"><span data-stu-id="cbc16-104">The `Delegate` statement defines the parameter types and return types of a delegate class.</span></span> <span data-ttu-id="cbc16-105">Qualsiasi routine con parametri, tipi e tipi restituiti corrispondenti può essere usata per creare un'istanza di questo tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="cbc16-105">Any procedure with matching parameters, types, and return type may be used to create an instance of this delegate type.</span></span> <span data-ttu-id="cbc16-106">Ogni classe delegata definisce un costruttore a cui viene passata la specifica di un metodo dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="cbc16-106">Each delegate class defines a constructor that is passed the specification of an object method.</span></span>  
+# <a name="method-methodname-does-not-have-the-same-signature-as-delegate-delegatename"></a><span data-ttu-id="fb233-102">Il metodo ' \<methodname> ' non ha la stessa firma del delegato ' \<delegatename> '</span><span class="sxs-lookup"><span data-stu-id="fb233-102">Method '\<methodname>' does not have the same signature as delegate '\<delegatename>'</span></span>
+<span data-ttu-id="fb233-103">Le firme del metodo e del delegato che si sta cercando di usare non corrispondono.</span><span class="sxs-lookup"><span data-stu-id="fb233-103">There is a mismatch between the signatures of the method and delegate you are attempting to use.</span></span> <span data-ttu-id="fb233-104">L'istruzione `Delegate` definisce i tipi di parametro e i tipi restituiti di una classe delegata.</span><span class="sxs-lookup"><span data-stu-id="fb233-104">The `Delegate` statement defines the parameter types and return types of a delegate class.</span></span> <span data-ttu-id="fb233-105">Qualsiasi routine con parametri, tipi e tipi restituiti corrispondenti può essere usata per creare un'istanza di questo tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="fb233-105">Any procedure with matching parameters, types, and return type may be used to create an instance of this delegate type.</span></span> <span data-ttu-id="fb233-106">Ogni classe delegata definisce un costruttore a cui viene passata la specifica di un metodo dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="fb233-106">Each delegate class defines a constructor that is passed the specification of an object method.</span></span>  
   
- <span data-ttu-id="cbc16-107">**ID errore:** BC30408</span><span class="sxs-lookup"><span data-stu-id="cbc16-107">**Error ID:** BC30408</span></span>  
+ <span data-ttu-id="fb233-107">**ID errore:** BC30408</span><span class="sxs-lookup"><span data-stu-id="fb233-107">**Error ID:** BC30408</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cbc16-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cbc16-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fb233-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fb233-108">To correct this error</span></span>  
   
-- <span data-ttu-id="cbc16-109">Verificare le firme per trovare la mancata corrispondenza e correggere l'errore.</span><span class="sxs-lookup"><span data-stu-id="cbc16-109">Check the signatures to find the mismatch, and correct it.</span></span>  
+- <span data-ttu-id="fb233-109">Verificare le firme per trovare la mancata corrispondenza e correggere l'errore.</span><span class="sxs-lookup"><span data-stu-id="fb233-109">Check the signatures to find the mismatch, and correct it.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cbc16-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cbc16-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fb233-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fb233-110">See also</span></span>
 
-- [<span data-ttu-id="cbc16-111">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="cbc16-111">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="fb233-111">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="fb233-111">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
