--- a/docs/visual-basic/misc/bc30412.md
+++ b/docs/visual-basic/misc/bc30412.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30412
 ms.assetid: 8c941523-8e5d-4bf0-8a52-772ecd5d5592
-ms.openlocfilehash: d6f363a84dbaeecc86b7d32895b0cd57ed88065b
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 0c0702ca2095bd7cae2c488df3d637e88d202783
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667328"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84362009"
 ---
-# <a name="withevents-variables-must-have-an-as-clause"></a><span data-ttu-id="85512-102">Le variabili 'WithEvents' devono avere una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="85512-102">'WithEvents' variables must have an 'As' clause</span></span>
-<span data-ttu-id="85512-103">Non è stata fornita una clausola `As` con la parola chiave `WithEvents`.</span><span class="sxs-lookup"><span data-stu-id="85512-103">You did not supply an `As` clause with the keyword `WithEvents`.</span></span> <span data-ttu-id="85512-104">Dichiarare la variabile come la classe specifica che può generare gli eventi.</span><span class="sxs-lookup"><span data-stu-id="85512-104">Declare the variable as the specific class that can raise the events.</span></span>  
+# <a name="withevents-variables-must-have-an-as-clause"></a><span data-ttu-id="ad69a-102">Le variabili 'WithEvents' devono avere una clausola 'As'</span><span class="sxs-lookup"><span data-stu-id="ad69a-102">'WithEvents' variables must have an 'As' clause</span></span>
+<span data-ttu-id="ad69a-103">Non è stata fornita una clausola `As` con la parola chiave `WithEvents`.</span><span class="sxs-lookup"><span data-stu-id="ad69a-103">You did not supply an `As` clause with the keyword `WithEvents`.</span></span> <span data-ttu-id="ad69a-104">Dichiarare la variabile come la classe specifica che può generare gli eventi.</span><span class="sxs-lookup"><span data-stu-id="ad69a-104">Declare the variable as the specific class that can raise the events.</span></span>  
   
- <span data-ttu-id="85512-105">**ID errore:** BC30412</span><span class="sxs-lookup"><span data-stu-id="85512-105">**Error ID:** BC30412</span></span>  
+ <span data-ttu-id="ad69a-105">**ID errore:** BC30412</span><span class="sxs-lookup"><span data-stu-id="ad69a-105">**Error ID:** BC30412</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="85512-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="85512-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ad69a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ad69a-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="85512-107">Aggiungere la clausola `As` che specifica la classe che può generare gli eventi.</span><span class="sxs-lookup"><span data-stu-id="85512-107">Add the `As` clause that specifies the class that can raise the events.</span></span>  
+1. <span data-ttu-id="ad69a-107">Aggiungere la clausola `As` che specifica la classe che può generare gli eventi.</span><span class="sxs-lookup"><span data-stu-id="ad69a-107">Add the `As` clause that specifies the class that can raise the events.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="85512-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="85512-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ad69a-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ad69a-108">See also</span></span>
 
-- [<span data-ttu-id="85512-109">WithEvents e clausola Handles</span><span class="sxs-lookup"><span data-stu-id="85512-109">WithEvents and the Handles clause</span></span>](../programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)
-- [<span data-ttu-id="85512-110">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="85512-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="ad69a-109">WithEvents e clausola Handles</span><span class="sxs-lookup"><span data-stu-id="ad69a-109">WithEvents and the Handles clause</span></span>](../programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)
+- [<span data-ttu-id="ad69a-110">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="ad69a-110">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
