--- a/docs/visual-basic/misc/bc30413.md
+++ b/docs/visual-basic/misc/bc30413.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30413
 ms.assetid: 11ddf207-2760-425f-b4c2-bb9fe6da36ea
-ms.openlocfilehash: 9b7245383e8b10cbd33cfcbffc54d91012792475
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 7ff12b635a182455175e872cba6d2428cb2c2b45
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69665123"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361983"
 ---
-# <a name="withevents-variables-can-only-be-typed-as-classes-interfaces-or-type-parameters-with-class-constraints"></a><span data-ttu-id="1da29-102">È possibile tipizzare le variabili 'WithEvents' solo come classi, interfacce o parametri di tipo con vincoli di classe</span><span class="sxs-lookup"><span data-stu-id="1da29-102">'WithEvents' variables can only be typed as classes, interfaces or type parameters with class constraints</span></span>
-<span data-ttu-id="1da29-103">È stata dichiarata una variabile tipizzata come una struttura in combinazione con `WithEvents`e questa operazione non costituisce un uso valido del modificatore `WithEvents` .</span><span class="sxs-lookup"><span data-stu-id="1da29-103">You declared a variable that is typed as a structure in conjunction with `WithEvents`, which is not a valid use of the `WithEvents` modifier.</span></span>  
+# <a name="withevents-variables-can-only-be-typed-as-classes-interfaces-or-type-parameters-with-class-constraints"></a><span data-ttu-id="0a0b8-102">È possibile tipizzare le variabili 'WithEvents' solo come classi, interfacce o parametri di tipo con vincoli di classe</span><span class="sxs-lookup"><span data-stu-id="0a0b8-102">'WithEvents' variables can only be typed as classes, interfaces or type parameters with class constraints</span></span>
+<span data-ttu-id="0a0b8-103">È stata dichiarata una variabile tipizzata come una struttura in combinazione con `WithEvents`e questa operazione non costituisce un uso valido del modificatore `WithEvents` .</span><span class="sxs-lookup"><span data-stu-id="0a0b8-103">You declared a variable that is typed as a structure in conjunction with `WithEvents`, which is not a valid use of the `WithEvents` modifier.</span></span>  
   
- <span data-ttu-id="1da29-104">**ID errore:** BC30413</span><span class="sxs-lookup"><span data-stu-id="1da29-104">**Error ID:** BC30413</span></span>  
+ <span data-ttu-id="0a0b8-104">**ID errore:** BC30413</span><span class="sxs-lookup"><span data-stu-id="0a0b8-104">**Error ID:** BC30413</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1da29-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1da29-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0a0b8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0a0b8-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="1da29-106">Usare `AddHandler` per gestire gli eventi definiti in una struttura.</span><span class="sxs-lookup"><span data-stu-id="1da29-106">Use `AddHandler` to handle events defined in a structure.</span></span>  
+1. <span data-ttu-id="0a0b8-106">Usare `AddHandler` per gestire gli eventi definiti in una struttura.</span><span class="sxs-lookup"><span data-stu-id="0a0b8-106">Use `AddHandler` to handle events defined in a structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1da29-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1da29-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0a0b8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0a0b8-107">See also</span></span>
 
-- [<span data-ttu-id="1da29-108">WithEvents e clausola Handles</span><span class="sxs-lookup"><span data-stu-id="1da29-108">WithEvents and the Handles clause</span></span>](../programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)
-- [<span data-ttu-id="1da29-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="1da29-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="1da29-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="1da29-110">AddHandler Statement</span></span>](../../visual-basic/language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="0a0b8-108">WithEvents e clausola Handles</span><span class="sxs-lookup"><span data-stu-id="0a0b8-108">WithEvents and the Handles clause</span></span>](../programming-guide/language-features/events/index.md#withevents-and-the-handles-clause)
+- [<span data-ttu-id="0a0b8-109">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="0a0b8-109">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="0a0b8-110">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="0a0b8-110">AddHandler Statement</span></span>](../language-reference/statements/addhandler-statement.md)
