--- a/docs/visual-basic/misc/bc30423.md
+++ b/docs/visual-basic/misc/bc30423.md
@@ -1,5 +1,5 @@
 ---
-title: I parametri facoltativi non possono essere dichiarati come tipo '<type>'
+title: I parametri facoltativi non possono essere dichiarati come tipo ' <type> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30423
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30423
 ms.assetid: 972dab8b-d91e-4a89-b822-2b8e4aadd25f
-ms.openlocfilehash: 3147a725d24a3e75b8995df20985bbe7deb594d3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ccf81c6a23992e88e1abdf22d4fd3f36ca4d19ef
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61931390"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361840"
 ---
-# <a name="optional-parameters-cannot-be-declared-as-the-type-type"></a><span data-ttu-id="19f8e-102">I parametri facoltativi non possono essere dichiarati come tipo '\<tipo >'</span><span class="sxs-lookup"><span data-stu-id="19f8e-102">Optional parameters cannot be declared as the type '\<type>'</span></span>
-<span data-ttu-id="19f8e-103">I parametri facoltativi non possono essere del tipo di dati di una struttura.</span><span class="sxs-lookup"><span data-stu-id="19f8e-103">Optional parameters cannot be of the data type of a structure.</span></span>  
+# <a name="optional-parameters-cannot-be-declared-as-the-type-type"></a><span data-ttu-id="85b57-102">I parametri facoltativi non possono essere dichiarati come tipo ' \<type> '</span><span class="sxs-lookup"><span data-stu-id="85b57-102">Optional parameters cannot be declared as the type '\<type>'</span></span>
+<span data-ttu-id="85b57-103">I parametri facoltativi non possono essere del tipo di dati di una struttura.</span><span class="sxs-lookup"><span data-stu-id="85b57-103">Optional parameters cannot be of the data type of a structure.</span></span>  
   
- <span data-ttu-id="19f8e-104">**ID errore:** BC30423</span><span class="sxs-lookup"><span data-stu-id="19f8e-104">**Error ID:** BC30423</span></span>  
+ <span data-ttu-id="85b57-104">**ID errore:** BC30423</span><span class="sxs-lookup"><span data-stu-id="85b57-104">**Error ID:** BC30423</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="19f8e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="19f8e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="85b57-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="85b57-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="19f8e-106">Per passare una struttura a un parametro facoltativo, dichiarare il parametro come `Object`.</span><span class="sxs-lookup"><span data-stu-id="19f8e-106">To pass a structure to an optional parameter, declare the parameter as `Object`.</span></span>  
+1. <span data-ttu-id="85b57-106">Per passare una struttura a un parametro facoltativo, dichiarare il parametro come `Object`.</span><span class="sxs-lookup"><span data-stu-id="85b57-106">To pass a structure to an optional parameter, declare the parameter as `Object`.</span></span>  
   
-2. <span data-ttu-id="19f8e-107">Usare `CType` per eseguire il cast del parametro a tale tipo di struttura all'interno della routine.</span><span class="sxs-lookup"><span data-stu-id="19f8e-107">Use `CType` to cast the parameter to that structure type within the procedure.</span></span>  
+2. <span data-ttu-id="85b57-107">Usare `CType` per eseguire il cast del parametro a tale tipo di struttura all'interno della routine.</span><span class="sxs-lookup"><span data-stu-id="85b57-107">Use `CType` to cast the parameter to that structure type within the procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="19f8e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="19f8e-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="85b57-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="85b57-108">See also</span></span>
 
-- [<span data-ttu-id="19f8e-109">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="19f8e-109">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
-- [<span data-ttu-id="19f8e-110">Funzione CType</span><span class="sxs-lookup"><span data-stu-id="19f8e-110">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
+- [<span data-ttu-id="85b57-109">Strutture e classi</span><span class="sxs-lookup"><span data-stu-id="85b57-109">Structures and Classes</span></span>](../programming-guide/language-features/data-types/structures-and-classes.md)
+- [<span data-ttu-id="85b57-110">CType Function</span><span class="sxs-lookup"><span data-stu-id="85b57-110">CType Function</span></span>](../language-reference/functions/ctype-function.md)
