--- a/docs/visual-basic/misc/bc30441.md
+++ b/docs/visual-basic/misc/bc30441.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30441
 ms.assetid: 0e4756b4-1f29-4073-88c5-8f8c93ba6c9e
-ms.openlocfilehash: eb5181afdda07cdd99d347ac9ae17b212bb85529
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 6955bc5e5d897cc5d1ccdc5e3bbf62296ccd6020
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61925450"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361814"
 ---
-# <a name="catch-must-end-with-a-matching-end-try"></a><span data-ttu-id="6ca7b-102">'Catch' deve terminare con un oggetto 'End Try' corrispondente</span><span class="sxs-lookup"><span data-stu-id="6ca7b-102">'Catch' must end with a matching 'End Try'</span></span>
-<span data-ttu-id="6ca7b-103">Un'istruzione `Catch` viene visualizzata nel codice senza un'istruzione `End Try` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="6ca7b-103">A `Catch` statement appears in your code without a matching `End Try` statement.</span></span> <span data-ttu-id="6ca7b-104">Le istruzioni`Catch` devono essere concluse con un'istruzione `End Try` .</span><span class="sxs-lookup"><span data-stu-id="6ca7b-104">`Catch` statements must be concluded with an `End Try` statement.</span></span>  
+# <a name="catch-must-end-with-a-matching-end-try"></a><span data-ttu-id="a8fb9-102">'Catch' deve terminare con un oggetto 'End Try' corrispondente</span><span class="sxs-lookup"><span data-stu-id="a8fb9-102">'Catch' must end with a matching 'End Try'</span></span>
+<span data-ttu-id="a8fb9-103">Un'istruzione `Catch` viene visualizzata nel codice senza un'istruzione `End Try` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="a8fb9-103">A `Catch` statement appears in your code without a matching `End Try` statement.</span></span> <span data-ttu-id="a8fb9-104">Le istruzioni`Catch` devono essere concluse con un'istruzione `End Try` .</span><span class="sxs-lookup"><span data-stu-id="a8fb9-104">`Catch` statements must be concluded with an `End Try` statement.</span></span>  
   
- <span data-ttu-id="6ca7b-105">**ID errore:** BC30441</span><span class="sxs-lookup"><span data-stu-id="6ca7b-105">**Error ID:** BC30441</span></span>  
+ <span data-ttu-id="a8fb9-105">**ID errore:** BC30441</span><span class="sxs-lookup"><span data-stu-id="a8fb9-105">**Error ID:** BC30441</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6ca7b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6ca7b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a8fb9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a8fb9-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="6ca7b-107">Rimuovere l'istruzione `Catch` .</span><span class="sxs-lookup"><span data-stu-id="6ca7b-107">Remove the `Catch` statement.</span></span>  
+1. <span data-ttu-id="a8fb9-107">Rimuovere l'istruzione `Catch` .</span><span class="sxs-lookup"><span data-stu-id="a8fb9-107">Remove the `Catch` statement.</span></span>  
   
-2. <span data-ttu-id="6ca7b-108">Aggiungere un'istruzione `End Try` per terminare il blocco.</span><span class="sxs-lookup"><span data-stu-id="6ca7b-108">Add an `End Try` statement to conclude the block.</span></span>  
+2. <span data-ttu-id="a8fb9-108">Aggiungere un'istruzione `End Try` per terminare il blocco.</span><span class="sxs-lookup"><span data-stu-id="a8fb9-108">Add an `End Try` statement to conclude the block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6ca7b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6ca7b-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a8fb9-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a8fb9-109">See also</span></span>
 
-- [<span data-ttu-id="6ca7b-110">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="6ca7b-110">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+- [<span data-ttu-id="a8fb9-110">Istruzione Try...Catch...Finally</span><span class="sxs-lookup"><span data-stu-id="a8fb9-110">Try...Catch...Finally Statement</span></span>](../language-reference/statements/try-catch-finally-statement.md)
