--- a/docs/visual-basic/misc/bc30758.md
+++ b/docs/visual-basic/misc/bc30758.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30758
 ms.assetid: b72d1ff2-f6b2-4a89-9ac2-8765f77bcc97
-ms.openlocfilehash: 3dcd34c33c2e28efd5b45690cdca864debe98803
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f414719cc1fda4133f03419adc705354825bbee8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667063"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361593"
 ---
-# <a name="attribute-cannot-be-used-because-it-does-not-have-a-public-constructor"></a><span data-ttu-id="41296-102">Non è possibile usare l'attributo perché non ha un costruttore Public</span><span class="sxs-lookup"><span data-stu-id="41296-102">Attribute cannot be used because it does not have a Public constructor</span></span>
-<span data-ttu-id="41296-103">Il costruttore dell'attributo usato è `Private`e non può essere usato.</span><span class="sxs-lookup"><span data-stu-id="41296-103">The constructor for the attribute being used is `Private`, and cannot be used.</span></span>  
+# <a name="attribute-cannot-be-used-because-it-does-not-have-a-public-constructor"></a><span data-ttu-id="332ed-102">Non è possibile usare l'attributo perché non ha un costruttore Public</span><span class="sxs-lookup"><span data-stu-id="332ed-102">Attribute cannot be used because it does not have a Public constructor</span></span>
+<span data-ttu-id="332ed-103">Il costruttore dell'attributo usato è `Private`e non può essere usato.</span><span class="sxs-lookup"><span data-stu-id="332ed-103">The constructor for the attribute being used is `Private`, and cannot be used.</span></span>  
   
- <span data-ttu-id="41296-104">**ID errore:** BC30758</span><span class="sxs-lookup"><span data-stu-id="41296-104">**Error ID:** BC30758</span></span>  
+ <span data-ttu-id="332ed-104">**ID errore:** BC30758</span><span class="sxs-lookup"><span data-stu-id="332ed-104">**Error ID:** BC30758</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="41296-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="41296-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="332ed-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="332ed-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="41296-106">Se questo errore viene visualizzato con un attributo personalizzato sviluppato, modificare il relativo modificatore di accesso del costruttore `Sub New` in `Public`.</span><span class="sxs-lookup"><span data-stu-id="41296-106">If you see this error with a custom attribute that you developed, change its `Sub New` constructor's access modifier to `Public`.</span></span>  
+1. <span data-ttu-id="332ed-106">Se questo errore viene visualizzato con un attributo personalizzato sviluppato, modificare il relativo modificatore di accesso del costruttore `Sub New` in `Public`.</span><span class="sxs-lookup"><span data-stu-id="332ed-106">If you see this error with a custom attribute that you developed, change its `Sub New` constructor's access modifier to `Public`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="41296-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="41296-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="332ed-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="332ed-107">See also</span></span>
 
-- [<span data-ttu-id="41296-108">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="41296-108">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
-- [<span data-ttu-id="41296-109">Durata degli oggetti: Come vengono creati ed eliminati gli oggetti</span><span class="sxs-lookup"><span data-stu-id="41296-109">Object Lifetime: How Objects Are Created and Destroyed</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/object-lifetime-how-objects-are-created-and-destroyed.md)
+- [<span data-ttu-id="332ed-108">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="332ed-108">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="332ed-109">Durata degli oggetti: come creare e distruggere oggetti</span><span class="sxs-lookup"><span data-stu-id="332ed-109">Object Lifetime: How Objects Are Created and Destroyed</span></span>](../programming-guide/language-features/objects-and-classes/object-lifetime-how-objects-are-created-and-destroyed.md)
