--- a/docs/visual-basic/misc/bc30762.md
+++ b/docs/visual-basic/misc/bc30762.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30762
 ms.assetid: b433014d-8422-46e8-ad55-321146a48186
-ms.openlocfilehash: cb0ef884dfdb437332cb78b44de1ce462f617038
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: bd7ebb469d61b916185f3d7d374691776cfacc5a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61755558"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361426"
 ---
-# <a name="the-targeted-version-of-the-net-compact-framework-does-not-support-latebinding"></a><span data-ttu-id="86d51-102">La versione di destinazione di .NET Compact Framework non supporta l'associazione tardiva</span><span class="sxs-lookup"><span data-stu-id="86d51-102">The targeted version of the .NET Compact Framework does not support latebinding</span></span>
-<span data-ttu-id="86d51-103">La versione di .NET Compact Framework che si sta usando non supporta l'associazione tardiva.</span><span class="sxs-lookup"><span data-stu-id="86d51-103">The version of the .NET Compact Framework you are working with does not support late binding.</span></span>  
+# <a name="the-targeted-version-of-the-net-compact-framework-does-not-support-latebinding"></a><span data-ttu-id="9659c-102">La versione di destinazione di .NET Compact Framework non supporta l'associazione tardiva</span><span class="sxs-lookup"><span data-stu-id="9659c-102">The targeted version of the .NET Compact Framework does not support latebinding</span></span>
+<span data-ttu-id="9659c-103">La versione di .NET Compact Framework che si sta usando non supporta l'associazione tardiva.</span><span class="sxs-lookup"><span data-stu-id="9659c-103">The version of the .NET Compact Framework you are working with does not support late binding.</span></span>  
   
- <span data-ttu-id="86d51-104">**ID errore:** BC30762</span><span class="sxs-lookup"><span data-stu-id="86d51-104">**Error ID:** BC30762</span></span>  
+ <span data-ttu-id="9659c-104">**ID errore:** BC30762</span><span class="sxs-lookup"><span data-stu-id="9659c-104">**Error ID:** BC30762</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="86d51-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="86d51-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9659c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9659c-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="86d51-106">Non chiamare funzioni, subroutine o proprietà in una variabile dichiarata come oggetto.</span><span class="sxs-lookup"><span data-stu-id="86d51-106">Avoid calling functions, subs or properties on a variable declared as object.</span></span>  
+1. <span data-ttu-id="9659c-106">Non chiamare funzioni, subroutine o proprietà in una variabile dichiarata come oggetto.</span><span class="sxs-lookup"><span data-stu-id="9659c-106">Avoid calling functions, subs or properties on a variable declared as object.</span></span>  
   
-2. <span data-ttu-id="86d51-107">Non usare la variabile oggetto come matrice.</span><span class="sxs-lookup"><span data-stu-id="86d51-107">Avoid using the object variable as an array.</span></span>  
+2. <span data-ttu-id="9659c-107">Non usare la variabile oggetto come matrice.</span><span class="sxs-lookup"><span data-stu-id="9659c-107">Avoid using the object variable as an array.</span></span>  
   
-3. <span data-ttu-id="86d51-108">Non usare espressioni di accesso ai membri dizionario con variabili oggetto.</span><span class="sxs-lookup"><span data-stu-id="86d51-108">Avoid using dictionary member access expressions with object variables.</span></span>  
+3. <span data-ttu-id="9659c-108">Non usare espressioni di accesso ai membri dizionario con variabili oggetto.</span><span class="sxs-lookup"><span data-stu-id="9659c-108">Avoid using dictionary member access expressions with object variables.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="86d51-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="86d51-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9659c-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9659c-109">See also</span></span>
 
-- [<span data-ttu-id="86d51-110">Caratteri speciali nel codice</span><span class="sxs-lookup"><span data-stu-id="86d51-110">Special Characters in Code</span></span>](../../visual-basic/programming-guide/program-structure/special-characters-in-code.md)
+- [<span data-ttu-id="9659c-110">Caratteri speciali nel codice</span><span class="sxs-lookup"><span data-stu-id="9659c-110">Special Characters in Code</span></span>](../programming-guide/program-structure/special-characters-in-code.md)
