--- a/docs/visual-basic/misc/bc30780.md
+++ b/docs/visual-basic/misc/bc30780.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30780
 ms.assetid: 91f3b390-1180-415f-90e1-49c9547a00bd
-ms.openlocfilehash: 2731b41e9c4932f58ea6a72b6cbd7c71d237feb6
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 6405342097b6badc4ad90ba627b5823f38c2d8c0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73197507"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361436"
 ---
-# <a name="continue-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="592e8-102">Le istruzioni 'Continue' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="592e8-102">'Continue' statements are not valid in the Immediate window</span></span>
-<span data-ttu-id="592e8-103">Le istruzioni ' continue ' possono essere usate solo nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="592e8-103">'Continue' statements can only be used in source code.</span></span>  
+# <a name="continue-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="c21f7-102">Le istruzioni 'Continue' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="c21f7-102">'Continue' statements are not valid in the Immediate window</span></span>
+<span data-ttu-id="c21f7-103">Le istruzioni ' continue ' possono essere usate solo nel codice sorgente.</span><span class="sxs-lookup"><span data-stu-id="c21f7-103">'Continue' statements can only be used in source code.</span></span>  
   
- <span data-ttu-id="592e8-104">**ID errore:** BC30780</span><span class="sxs-lookup"><span data-stu-id="592e8-104">**Error ID:** BC30780</span></span>  
+ <span data-ttu-id="c21f7-104">**ID errore:** BC30780</span><span class="sxs-lookup"><span data-stu-id="c21f7-104">**Error ID:** BC30780</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="592e8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="592e8-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c21f7-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c21f7-105">To correct this error</span></span>  
   
-- <span data-ttu-id="592e8-106">Rimuovere l'istruzione ' continue ' dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="592e8-106">Remove the 'Continue' statement from the debugging code.</span></span>  
+- <span data-ttu-id="c21f7-106">Rimuovere l'istruzione ' continue ' dal codice di debug.</span><span class="sxs-lookup"><span data-stu-id="c21f7-106">Remove the 'Continue' statement from the debugging code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="592e8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="592e8-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c21f7-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c21f7-107">See also</span></span>
 
-- [<span data-ttu-id="592e8-108">Istruzione Continue</span><span class="sxs-lookup"><span data-stu-id="592e8-108">Continue Statement</span></span>](../../visual-basic/language-reference/statements/continue-statement.md)
-- [<span data-ttu-id="592e8-109">Finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="592e8-109">Immediate Window</span></span>](/visualstudio/ide/reference/immediate-window)
-- [<span data-ttu-id="592e8-110">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="592e8-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
+- [<span data-ttu-id="c21f7-108">Istruzione continue</span><span class="sxs-lookup"><span data-stu-id="c21f7-108">Continue Statement</span></span>](../language-reference/statements/continue-statement.md)
+- [<span data-ttu-id="c21f7-109">Finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="c21f7-109">Immediate Window</span></span>](/visualstudio/ide/reference/immediate-window)
+- [<span data-ttu-id="c21f7-110">Debug in Visual Studio</span><span class="sxs-lookup"><span data-stu-id="c21f7-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugger-feature-tour)
