--- a/docs/visual-basic/misc/bc30985.md
+++ b/docs/visual-basic/misc/bc30985.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30985
 ms.assetid: 4cb543e1-477c-429c-82df-541ebff08543
-ms.openlocfilehash: 9cff84366aee74c04f843ca9ba35a7acd6a27280
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 9cbeb364c35cb5dcc421527b7323573656f57bba
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352548"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399761"
 ---
-# <a name="name-of-field-or-property-being-initialized-must-start-with-"></a><span data-ttu-id="7806a-102">Il nome di un campo o di una proprietà inizializzato in un inizializzatore di oggetti deve iniziare con '.'</span><span class="sxs-lookup"><span data-stu-id="7806a-102">Name of field or property being initialized must start with '.'</span></span>
-<span data-ttu-id="7806a-103">Ogni membro inizializzato da un elenco di inizializzatori di oggetti specifica il nome di un campo o di una proprietà e il relativo valore iniziale.</span><span class="sxs-lookup"><span data-stu-id="7806a-103">Each member initializer in an object initializer list specifies the name of a field or property and its initial value.</span></span> <span data-ttu-id="7806a-104">Il nome del campo o della proprietà deve essere preceduto da un punto.</span><span class="sxs-lookup"><span data-stu-id="7806a-104">The name of the field or property must be preceded by a period.</span></span> <span data-ttu-id="7806a-105">Ad esempio, la dichiarazione seguente assegna "Microsoft" come valore iniziale per la proprietà `Name` di `client`.</span><span class="sxs-lookup"><span data-stu-id="7806a-105">For example, the following declaration assigns "Microsoft" as the initial value for the `Name` property of `client`.</span></span>  
+# <a name="name-of-field-or-property-being-initialized-must-start-with-"></a><span data-ttu-id="71489-102">Il nome di un campo o di una proprietà inizializzato in un inizializzatore di oggetti deve iniziare con '.'</span><span class="sxs-lookup"><span data-stu-id="71489-102">Name of field or property being initialized must start with '.'</span></span>
+<span data-ttu-id="71489-103">Ogni membro inizializzato da un elenco di inizializzatori di oggetti specifica il nome di un campo o di una proprietà e il relativo valore iniziale.</span><span class="sxs-lookup"><span data-stu-id="71489-103">Each member initializer in an object initializer list specifies the name of a field or property and its initial value.</span></span> <span data-ttu-id="71489-104">Il nome del campo o della proprietà deve essere preceduto da un punto.</span><span class="sxs-lookup"><span data-stu-id="71489-104">The name of the field or property must be preceded by a period.</span></span> <span data-ttu-id="71489-105">Ad esempio, la dichiarazione seguente assegna "Microsoft" come valore iniziale per la proprietà `Name` di `client`.</span><span class="sxs-lookup"><span data-stu-id="71489-105">For example, the following declaration assigns "Microsoft" as the initial value for the `Name` property of `client`.</span></span>  
   
 ```vb  
 Dim client As New Customer() With { .Name = "Microsoft" }  
 ```  
   
- <span data-ttu-id="7806a-106">**ID errore:** BC30985</span><span class="sxs-lookup"><span data-stu-id="7806a-106">**Error ID:** BC30985</span></span>  
+ <span data-ttu-id="71489-106">**ID errore:** BC30985</span><span class="sxs-lookup"><span data-stu-id="71489-106">**Error ID:** BC30985</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7806a-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7806a-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="71489-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="71489-107">To correct this error</span></span>  
   
-- <span data-ttu-id="7806a-108">Anteporre un punto a ogni nome di membro.</span><span class="sxs-lookup"><span data-stu-id="7806a-108">Prefix each member name with a period.</span></span>  
+- <span data-ttu-id="71489-108">Anteporre un punto a ogni nome di membro.</span><span class="sxs-lookup"><span data-stu-id="71489-108">Prefix each member name with a period.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7806a-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7806a-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="71489-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="71489-109">See also</span></span>
 
-- [<span data-ttu-id="7806a-110">Inizializzatori di oggetto: tipi denominati e tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="7806a-110">Object Initializers: Named and Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
+- [<span data-ttu-id="71489-110">Inizializzatori di oggetto: tipi denominati e tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="71489-110">Object Initializers: Named and Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
