--- a/docs/visual-basic/misc/bc31178.md
+++ b/docs/visual-basic/misc/bc31178.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31178
 ms.assetid: bacb4bb2-1107-4f10-83f3-6b05fd37fd80
-ms.openlocfilehash: 6dd3d1ef477fbe0207fbc3979e5d9a8bbcaf4125
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2391c809d2da68fc2b18612bf6c2eedc78e5b1e7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64665570"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401030"
 ---
-# <a name="expected-closing--for-xml-entity"></a><span data-ttu-id="3bf33-102">Previsto ';' di chiusura per l'entità XML</span><span class="sxs-lookup"><span data-stu-id="3bf33-102">Expected closing ';' for XML entity</span></span>
-<span data-ttu-id="3bf33-103">In un riferimento a entità XML (ad esempio, `>`) manca un punto e virgola di chiusura (;).</span><span class="sxs-lookup"><span data-stu-id="3bf33-103">An XML entity reference (for example, `>`) is missing a closing semicolon (;).</span></span>  
+# <a name="expected-closing--for-xml-entity"></a><span data-ttu-id="ed247-102">Previsto ';' di chiusura per l'entità XML</span><span class="sxs-lookup"><span data-stu-id="ed247-102">Expected closing ';' for XML entity</span></span>
+<span data-ttu-id="ed247-103">In un riferimento a entità XML (ad esempio, `>`) manca un punto e virgola di chiusura (;).</span><span class="sxs-lookup"><span data-stu-id="ed247-103">An XML entity reference (for example, `>`) is missing a closing semicolon (;).</span></span>  
   
- <span data-ttu-id="3bf33-104">**ID errore:** BC31178</span><span class="sxs-lookup"><span data-stu-id="3bf33-104">**Error ID:** BC31178</span></span>  
+ <span data-ttu-id="ed247-104">**ID errore:** BC31178</span><span class="sxs-lookup"><span data-stu-id="ed247-104">**Error ID:** BC31178</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3bf33-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3bf33-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ed247-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ed247-105">To correct this error</span></span>  
   
-- <span data-ttu-id="3bf33-106">Includere il punto e virgola alla fine del riferimento a entità XML.</span><span class="sxs-lookup"><span data-stu-id="3bf33-106">Include the semicolon at the end of the XML entity reference.</span></span>  
+- <span data-ttu-id="ed247-106">Includere il punto e virgola alla fine del riferimento a entità XML.</span><span class="sxs-lookup"><span data-stu-id="ed247-106">Include the semicolon at the end of the XML entity reference.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3bf33-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3bf33-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ed247-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ed247-107">See also</span></span>
 
-- [<span data-ttu-id="3bf33-108">Valori letterali XML e specifica XML 1.0</span><span class="sxs-lookup"><span data-stu-id="3bf33-108">XML Literals and the XML 1.0 Specification</span></span>](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
-- [<span data-ttu-id="3bf33-109">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="3bf33-109">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="3bf33-110">XML</span><span class="sxs-lookup"><span data-stu-id="3bf33-110">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="ed247-108">Valori letterali XML e specifica XML 1.0</span><span class="sxs-lookup"><span data-stu-id="ed247-108">XML Literals and the XML 1.0 Specification</span></span>](../programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
+- [<span data-ttu-id="ed247-109">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="ed247-109">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="ed247-110">XML</span><span class="sxs-lookup"><span data-stu-id="ed247-110">XML</span></span>](../programming-guide/language-features/xml/index.md)
