--- a/docs/visual-basic/misc/bc32045.md
+++ b/docs/visual-basic/misc/bc32045.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>' non dispone di alcun tipo di parametri, quindi non può avere argomenti tipo
+title: Il tipo '<typename>' non ha parametri di tipo, quindi non può avere argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32045
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32045
 ms.assetid: b86e784c-6718-4585-bd39-2f0982068828
-ms.openlocfilehash: af463dec83ed0792e6678e497157bff42f7467af
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: b081eaf4722e7df8fee4197c5870b955650acba0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61934992"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407288"
 ---
-# <a name="type-typename-has-no-type-parameters-and-so-cannot-have-type-arguments"></a><span data-ttu-id="715f5-102">Tipo '\<nomeTipo >' non ha nessun tipo parametri, quindi non può avere argomenti tipo</span><span class="sxs-lookup"><span data-stu-id="715f5-102">Type '\<typename>' has no type parameters and so cannot have type arguments</span></span>
-<span data-ttu-id="715f5-103">Quando viene richiamato un tipo non generico, una dichiarazione o un'istruzione di assegnazione include una clausola [Of](../../visual-basic/language-reference/statements/of-clause.md) .</span><span class="sxs-lookup"><span data-stu-id="715f5-103">A declaration or assignment statement includes an [Of](../../visual-basic/language-reference/statements/of-clause.md) clause when invoking a non-generic type.</span></span>  
+# <a name="type-typename-has-no-type-parameters-and-so-cannot-have-type-arguments"></a><span data-ttu-id="97f37-102">Il tipo '\<typename>' non ha parametri di tipo, quindi non può avere argomenti di tipo</span><span class="sxs-lookup"><span data-stu-id="97f37-102">Type '\<typename>' has no type parameters and so cannot have type arguments</span></span>
+<span data-ttu-id="97f37-103">Quando viene richiamato un tipo non generico, una dichiarazione o un'istruzione di assegnazione include una clausola [Of](../language-reference/statements/of-clause.md) .</span><span class="sxs-lookup"><span data-stu-id="97f37-103">A declaration or assignment statement includes an [Of](../language-reference/statements/of-clause.md) clause when invoking a non-generic type.</span></span>  
   
- <span data-ttu-id="715f5-104">Per definizione, un *tipo generic* o è una classe, struttura, interfaccia, routine o delegato che opera solo su tipi di dati che è possibile specificare tramite uno o più *parametri di tipo*.</span><span class="sxs-lookup"><span data-stu-id="715f5-104">By its definition, a *generic type* is a class, structure, interface, procedure, or delegate that operates on data types you can specify through one or more *type parameters*.</span></span> <span data-ttu-id="715f5-105">Quando il codice di utilizzo crea un tipo da questo tipo generico, fornisce a ogni parametro di tipo un *argomento di tipo* .</span><span class="sxs-lookup"><span data-stu-id="715f5-105">When the using code creates a type from this generic type, it supplies a *type argument* to each type parameter.</span></span> <span data-ttu-id="715f5-106">Come parte della creazione del tipo, ogni argomento di tipo sostituisce ogni occorrenza del parametro di tipo corrispondente nel codice generato.</span><span class="sxs-lookup"><span data-stu-id="715f5-106">As part of the creation of the type, each type argument replaces every occurrence of its corresponding type parameter in the generated code.</span></span>  
+ <span data-ttu-id="97f37-104">Per definizione, un *tipo generic* o è una classe, struttura, interfaccia, routine o delegato che opera solo su tipi di dati che è possibile specificare tramite uno o più *parametri di tipo*.</span><span class="sxs-lookup"><span data-stu-id="97f37-104">By its definition, a *generic type* is a class, structure, interface, procedure, or delegate that operates on data types you can specify through one or more *type parameters*.</span></span> <span data-ttu-id="97f37-105">Quando il codice di utilizzo crea un tipo da questo tipo generico, fornisce a ogni parametro di tipo un *argomento di tipo* .</span><span class="sxs-lookup"><span data-stu-id="97f37-105">When the using code creates a type from this generic type, it supplies a *type argument* to each type parameter.</span></span> <span data-ttu-id="97f37-106">Come parte della creazione del tipo, ogni argomento di tipo sostituisce ogni occorrenza del parametro di tipo corrispondente nel codice generato.</span><span class="sxs-lookup"><span data-stu-id="97f37-106">As part of the creation of the type, each type argument replaces every occurrence of its corresponding type parameter in the generated code.</span></span>  
   
- <span data-ttu-id="715f5-107">I parametri di tipo sono definiti con una clausola `Of` tra parentesi e gli argomenti di tipo vengono forniti tramite una clausola `Of` tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="715f5-107">Type parameters are defined with an `Of` clause inside parentheses, and type arguments are supplied using an `Of` clause inside parentheses.</span></span> <span data-ttu-id="715f5-108">La clausola `Of` viene usata solo quando si usano i tipi generici.</span><span class="sxs-lookup"><span data-stu-id="715f5-108">The `Of` clause is used only when dealing with generic types.</span></span>  
+ <span data-ttu-id="97f37-107">I parametri di tipo sono definiti con una clausola `Of` tra parentesi e gli argomenti di tipo vengono forniti tramite una clausola `Of` tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="97f37-107">Type parameters are defined with an `Of` clause inside parentheses, and type arguments are supplied using an `Of` clause inside parentheses.</span></span> <span data-ttu-id="97f37-108">La clausola `Of` viene usata solo quando si usano i tipi generici.</span><span class="sxs-lookup"><span data-stu-id="97f37-108">The `Of` clause is used only when dealing with generic types.</span></span>  
   
- <span data-ttu-id="715f5-109">I tipi non generici non accettano i parametri di tipo e quando vengono richiamati non è possibile specificare argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="715f5-109">Non-generic types do not accept type parameters, and you cannot specify any type arguments when you invoke such a type.</span></span>  
+ <span data-ttu-id="97f37-109">I tipi non generici non accettano i parametri di tipo e quando vengono richiamati non è possibile specificare argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="97f37-109">Non-generic types do not accept type parameters, and you cannot specify any type arguments when you invoke such a type.</span></span>  
   
- <span data-ttu-id="715f5-110">**ID errore:** BC32045</span><span class="sxs-lookup"><span data-stu-id="715f5-110">**Error ID:** BC32045</span></span>  
+ <span data-ttu-id="97f37-110">**ID errore:** BC32045</span><span class="sxs-lookup"><span data-stu-id="97f37-110">**Error ID:** BC32045</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="715f5-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="715f5-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="97f37-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="97f37-111">To correct this error</span></span>  
   
-1. <span data-ttu-id="715f5-112">Controllare l'ortografia del tipo usato nella dichiarazione o nell'istruzione di assegnazione.</span><span class="sxs-lookup"><span data-stu-id="715f5-112">Check the spelling of the type you are using in the declaration or assignment statement.</span></span>  
+1. <span data-ttu-id="97f37-112">Controllare l'ortografia del tipo usato nella dichiarazione o nell'istruzione di assegnazione.</span><span class="sxs-lookup"><span data-stu-id="97f37-112">Check the spelling of the type you are using in the declaration or assignment statement.</span></span>  
   
-2. <span data-ttu-id="715f5-113">Se si richiama un tipo non generico, rimuovere la clausola `Of` e le sue parentesi, se presenti.</span><span class="sxs-lookup"><span data-stu-id="715f5-113">If you are invoking a non-generic type, remove the `Of` clause and its parentheses, if any.</span></span> <span data-ttu-id="715f5-114">Non rimuovere le parentesi che circondano un elenco di argomenti standard per una routine, un delegato o un costruttore di classe.</span><span class="sxs-lookup"><span data-stu-id="715f5-114">Do not remove parentheses surrounding a standard argument list for a procedure, delegate, or class constructor.</span></span>  
+2. <span data-ttu-id="97f37-113">Se si richiama un tipo non generico, rimuovere la clausola `Of` e le sue parentesi, se presenti.</span><span class="sxs-lookup"><span data-stu-id="97f37-113">If you are invoking a non-generic type, remove the `Of` clause and its parentheses, if any.</span></span> <span data-ttu-id="97f37-114">Non rimuovere le parentesi che circondano un elenco di argomenti standard per una routine, un delegato o un costruttore di classe.</span><span class="sxs-lookup"><span data-stu-id="97f37-114">Do not remove parentheses surrounding a standard argument list for a procedure, delegate, or class constructor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="715f5-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="715f5-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="97f37-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="97f37-115">See also</span></span>
 
-- [<span data-ttu-id="715f5-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="715f5-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="715f5-117">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="715f5-117">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="715f5-118">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="715f5-118">How to: Use a Generic Class</span></span>](../../visual-basic/programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
+- [<span data-ttu-id="97f37-116">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="97f37-116">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="97f37-117">Type List</span><span class="sxs-lookup"><span data-stu-id="97f37-117">Type List</span></span>](../language-reference/statements/type-list.md)
+- [<span data-ttu-id="97f37-118">Procedura: Usare una classe generica</span><span class="sxs-lookup"><span data-stu-id="97f37-118">How to: Use a Generic Class</span></span>](../programming-guide/language-features/data-types/how-to-use-a-generic-class.md)
