--- a/docs/visual-basic/misc/bc32046.md
+++ b/docs/visual-basic/misc/bc32046.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC32046
 ms.assetid: 7ec6b52d-6fd5-47a0-b4a2-163bfd3dae35
-ms.openlocfilehash: 7e34c23fb0fab9b348cb81768760ab4117fe12e8
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d2fb552467a4ce3908dce121073a992770e5d493
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912817"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407275"
 ---
-# <a name="new-cannot-be-used-on-a-type-parameter-that-does-not-have-a-new-constraint"></a><span data-ttu-id="61015-102">Impossibile utilizzare 'New' in un parametro di tipo che non ha un vincolo 'New'</span><span class="sxs-lookup"><span data-stu-id="61015-102">'New' cannot be used on a type parameter that does not have a 'New' constraint</span></span>
-<span data-ttu-id="61015-103">Un'istruzione di dichiarazione Usa una [nuovo operatore](../../visual-basic/language-reference/operators/new-operator.md) clausola che specifica un parametro di tipo come tipo di creazione e il parametro di tipo viene dichiarato senza un `New` vincolo.</span><span class="sxs-lookup"><span data-stu-id="61015-103">A declaration statement uses a [New Operator](../../visual-basic/language-reference/operators/new-operator.md) clause specifying a type parameter as the type to be created, and the type parameter is declared without a `New` constraint.</span></span>  
+# <a name="new-cannot-be-used-on-a-type-parameter-that-does-not-have-a-new-constraint"></a><span data-ttu-id="dfedb-102">Impossibile utilizzare 'New' in un parametro di tipo che non ha un vincolo 'New'</span><span class="sxs-lookup"><span data-stu-id="dfedb-102">'New' cannot be used on a type parameter that does not have a 'New' constraint</span></span>
+<span data-ttu-id="dfedb-103">Un'istruzione di dichiarazione usa una [nuova clausola operator](../language-reference/operators/new-operator.md) che specifica un parametro di tipo come tipo da creare e il parametro di tipo viene dichiarato senza un `New` vincolo.</span><span class="sxs-lookup"><span data-stu-id="dfedb-103">A declaration statement uses a [New Operator](../language-reference/operators/new-operator.md) clause specifying a type parameter as the type to be created, and the type parameter is declared without a `New` constraint.</span></span>  
   
- <span data-ttu-id="61015-104">Un *vincolo* su un parametro di tipo impone un requisito su qualsiasi argomento di tipo passato a tale parametro di tipo quando viene creato il tipo generico.</span><span class="sxs-lookup"><span data-stu-id="61015-104">A *constraint* on a type parameter imposes a requirement on any type argument passed to that type parameter when the generic type is created.</span></span> <span data-ttu-id="61015-105">Il vincolo `New` specifica che l'argomento di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="61015-105">The `New` constraint specifies that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="61015-106">Questo è ciò che consente a una clausola `New` in un'istruzione di dichiarazione per creare un'istanza di quel tipo.</span><span class="sxs-lookup"><span data-stu-id="61015-106">This is what allows a `New` clause in a declaration statement to create an instance of that type.</span></span>  
+ <span data-ttu-id="dfedb-104">Un *vincolo* su un parametro di tipo impone un requisito su qualsiasi argomento di tipo passato a tale parametro di tipo quando viene creato il tipo generico.</span><span class="sxs-lookup"><span data-stu-id="dfedb-104">A *constraint* on a type parameter imposes a requirement on any type argument passed to that type parameter when the generic type is created.</span></span> <span data-ttu-id="dfedb-105">Il vincolo `New` specifica che l'argomento di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="dfedb-105">The `New` constraint specifies that the type argument must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="dfedb-106">Questo è ciò che consente a una clausola `New` in un'istruzione di dichiarazione per creare un'istanza di quel tipo.</span><span class="sxs-lookup"><span data-stu-id="dfedb-106">This is what allows a `New` clause in a declaration statement to create an instance of that type.</span></span>  
   
- <span data-ttu-id="61015-107">**ID errore:** BC32046</span><span class="sxs-lookup"><span data-stu-id="61015-107">**Error ID:** BC32046</span></span>  
+ <span data-ttu-id="dfedb-107">**ID errore:** BC32046</span><span class="sxs-lookup"><span data-stu-id="dfedb-107">**Error ID:** BC32046</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="61015-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="61015-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dfedb-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dfedb-108">To correct this error</span></span>  
   
-- <span data-ttu-id="61015-109">Se è possibile richiedere all'argomento di tipo di esporre un costruttore senza parametri accessibile, aggiungere il vincolo `New` alla dichiarazione del parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="61015-109">If you can require the type argument to expose an accessible parameterless constructor, add the `New` constraint to the declaration of the type parameter.</span></span>  
+- <span data-ttu-id="dfedb-109">Se è possibile richiedere all'argomento di tipo di esporre un costruttore senza parametri accessibile, aggiungere il vincolo `New` alla dichiarazione del parametro di tipo.</span><span class="sxs-lookup"><span data-stu-id="dfedb-109">If you can require the type argument to expose an accessible parameterless constructor, add the `New` constraint to the declaration of the type parameter.</span></span>  
   
-- <span data-ttu-id="61015-110">Se non è possibile richiedere all'argomento di tipo di esporre un costruttore senza parametri accessibile, aggiungere la clausola `New` dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="61015-110">If you cannot require the type argument to expose an accessible parameterless constructor, remove the `New` clause from the declaration statement.</span></span> <span data-ttu-id="61015-111">Non è possibile garantire che qualsiasi argomento di tipo passato a tale parametro di tipo permetta la creazione di un'istanza.</span><span class="sxs-lookup"><span data-stu-id="61015-111">You cannot guarantee that any type argument passed to that type parameter permits creation of an instance.</span></span>  
+- <span data-ttu-id="dfedb-110">Se non è possibile richiedere all'argomento di tipo di esporre un costruttore senza parametri accessibile, aggiungere la clausola `New` dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="dfedb-110">If you cannot require the type argument to expose an accessible parameterless constructor, remove the `New` clause from the declaration statement.</span></span> <span data-ttu-id="dfedb-111">Non è possibile garantire che qualsiasi argomento di tipo passato a tale parametro di tipo permetta la creazione di un'istanza.</span><span class="sxs-lookup"><span data-stu-id="dfedb-111">You cannot guarantee that any type argument passed to that type parameter permits creation of an instance.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="61015-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="61015-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dfedb-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dfedb-112">See also</span></span>
 
-- [<span data-ttu-id="61015-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="61015-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="61015-114">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="61015-114">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="dfedb-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dfedb-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="dfedb-114">Type List</span><span class="sxs-lookup"><span data-stu-id="dfedb-114">Type List</span></span>](../language-reference/statements/type-list.md)
