--- a/docs/visual-basic/misc/bc32099.md
+++ b/docs/visual-basic/misc/bc32099.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32099
 ms.assetid: 8ab77752-3b65-48ef-abd1-09cfc0ccb63b
-ms.openlocfilehash: e4cecebcabd92472dddff6a4519eb41e9377a726
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7737b799b70ff92f38d714ebcf7a0c745a5bed17
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618490"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365267"
 ---
-# <a name="comma-or--expected-type-parameter-list"></a><span data-ttu-id="ba2fe-102">Prevista virgola o ')' (elenco dei parametri di tipo)</span><span class="sxs-lookup"><span data-stu-id="ba2fe-102">Comma or ')' expected (Type Parameter List)</span></span>
-<span data-ttu-id="ba2fe-103">Un elenco di parametri di tipo contiene un elemento imprevisto.</span><span class="sxs-lookup"><span data-stu-id="ba2fe-103">A type parameter list contains an unexpected element.</span></span> <span data-ttu-id="ba2fe-104">Usare le virgole (`,`) per separare i parametri di tipo in un elenco di questo genere e usare una parentesi di chiusura (`)`) per concludere l'elenco.</span><span class="sxs-lookup"><span data-stu-id="ba2fe-104">Use commas (`,`) to separate type parameters in such a list, and use a closing parenthesis (`)`) to end the list.</span></span>  
+# <a name="comma-or--expected-type-parameter-list"></a><span data-ttu-id="4388f-102">Prevista virgola o ')' (elenco dei parametri di tipo)</span><span class="sxs-lookup"><span data-stu-id="4388f-102">Comma or ')' expected (Type Parameter List)</span></span>
+<span data-ttu-id="4388f-103">Un elenco di parametri di tipo contiene un elemento imprevisto.</span><span class="sxs-lookup"><span data-stu-id="4388f-103">A type parameter list contains an unexpected element.</span></span> <span data-ttu-id="4388f-104">Usare le virgole (`,`) per separare i parametri di tipo in un elenco di questo genere e usare una parentesi di chiusura (`)`) per concludere l'elenco.</span><span class="sxs-lookup"><span data-stu-id="4388f-104">Use commas (`,`) to separate type parameters in such a list, and use a closing parenthesis (`)`) to end the list.</span></span>  
   
- <span data-ttu-id="ba2fe-105">**ID errore:** BC32099</span><span class="sxs-lookup"><span data-stu-id="ba2fe-105">**Error ID:** BC32099</span></span>  
+ <span data-ttu-id="4388f-105">**ID errore:** BC32099</span><span class="sxs-lookup"><span data-stu-id="4388f-105">**Error ID:** BC32099</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ba2fe-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ba2fe-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4388f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4388f-106">To correct this error</span></span>  
   
-- <span data-ttu-id="ba2fe-107">Aggiungere una virgola e proseguire l'elenco dei parametri di tipo oppure aggiungere una parentesi di chiusura per terminare l'elenco.</span><span class="sxs-lookup"><span data-stu-id="ba2fe-107">Add a comma and continue the type parameter list, or add a closing parenthesis character to terminate the list.</span></span>  
+- <span data-ttu-id="4388f-107">Aggiungere una virgola e proseguire l'elenco dei parametri di tipo oppure aggiungere una parentesi di chiusura per terminare l'elenco.</span><span class="sxs-lookup"><span data-stu-id="4388f-107">Add a comma and continue the type parameter list, or add a closing parenthesis character to terminate the list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ba2fe-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ba2fe-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4388f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4388f-108">See also</span></span>
 
-- [<span data-ttu-id="ba2fe-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="ba2fe-109">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="ba2fe-110">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="ba2fe-110">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="4388f-109">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4388f-109">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="4388f-110">Type List</span><span class="sxs-lookup"><span data-stu-id="4388f-110">Type List</span></span>](../language-reference/statements/type-list.md)
