--- a/docs/visual-basic/misc/bc36639.md
+++ b/docs/visual-basic/misc/bc36639.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36639
 ms.assetid: 5913f9b6-2929-4c05-8dd1-00b10fcd5a83
-ms.openlocfilehash: 2bd5fd4fe738562d5607587759d9854e6a26ac87
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 4603ac7a4b911f8aa32b7af086f08763e3c5e7b8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266755"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398760"
 ---
-# <a name="byref-parameter-parametername-cannot-be-used-in-a-lambda-expression"></a><span data-ttu-id="363eb-102">Impossibile utilizzare il\<parametro 'ByRef' ' nomeparametro>' in un'espressione lambda'ByRef' parameter ' parametername>' cannot be used in a lambda expression</span><span class="sxs-lookup"><span data-stu-id="363eb-102">'ByRef' parameter '\<parametername>' cannot be used in a lambda expression</span></span>
-<span data-ttu-id="363eb-103">Un'espressione lambda dichiarata all'interno di `Sub` o di una funzione non può usare alcun parametro `ByRef` di quella funzione `Sub` .</span><span class="sxs-lookup"><span data-stu-id="363eb-103">A lambda expression declared within a `Sub` or function cannot use any `ByRef` parameters of that `Sub` or function.</span></span> <span data-ttu-id="363eb-104">Ad esempio, il codice seguente causerà questo errore perché l'espressione lambda usa il parametro `ByRef``n` .</span><span class="sxs-lookup"><span data-stu-id="363eb-104">For example, the following code will cause this error because the `ByRef` parameter `n` is used in the lambda expression.</span></span>  
+# <a name="byref-parameter-parametername-cannot-be-used-in-a-lambda-expression"></a><span data-ttu-id="00dbe-102">Impossibile usare il parametro 'ByRef' '\<parametername>' in un'espressione lambda</span><span class="sxs-lookup"><span data-stu-id="00dbe-102">'ByRef' parameter '\<parametername>' cannot be used in a lambda expression</span></span>
+<span data-ttu-id="00dbe-103">Un'espressione lambda dichiarata all'interno di `Sub` o di una funzione non può usare alcun parametro `ByRef` di quella funzione `Sub` .</span><span class="sxs-lookup"><span data-stu-id="00dbe-103">A lambda expression declared within a `Sub` or function cannot use any `ByRef` parameters of that `Sub` or function.</span></span> <span data-ttu-id="00dbe-104">Ad esempio, il codice seguente causerà questo errore perché l'espressione lambda usa il parametro `ByRef``n` .</span><span class="sxs-lookup"><span data-stu-id="00dbe-104">For example, the following code will cause this error because the `ByRef` parameter `n` is used in the lambda expression.</span></span>  
   
 ```vb  
 '' Not valid.
@@ -26,11 +26,11 @@ ms.locfileid: "78266755"
 'End Sub  
 ```  
   
- <span data-ttu-id="363eb-105">**ID errore:** BC36639</span><span class="sxs-lookup"><span data-stu-id="363eb-105">**Error ID:** BC36639</span></span>  
+ <span data-ttu-id="00dbe-105">**ID errore:** BC36639</span><span class="sxs-lookup"><span data-stu-id="00dbe-105">**Error ID:** BC36639</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="363eb-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="363eb-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="00dbe-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="00dbe-106">To correct this error</span></span>  
   
-- <span data-ttu-id="363eb-107">Assegnare il parametro `ByRef` a una variabile locale e usare la variabile locale al posto dell'espressione lambda, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="363eb-107">Assign the `ByRef` parameter to a local variable, and use the local variable in the lambda expression, as shown in the following code:</span></span>  
+- <span data-ttu-id="00dbe-107">Assegnare il parametro `ByRef` a una variabile locale e usare la variabile locale al posto dell'espressione lambda, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="00dbe-107">Assign the `ByRef` parameter to a local variable, and use the local variable in the lambda expression, as shown in the following code:</span></span>  
   
     ```vb  
     Sub ExampleSub(ByRef n As Integer)  
@@ -41,6 +41,6 @@ ms.locfileid: "78266755"
     End Sub  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="363eb-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="363eb-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="00dbe-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="00dbe-108">See also</span></span>
 
-- [<span data-ttu-id="363eb-109">Espressioni lambdaLambda Expressions</span><span class="sxs-lookup"><span data-stu-id="363eb-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [<span data-ttu-id="00dbe-109">Espressioni lambda</span><span class="sxs-lookup"><span data-stu-id="00dbe-109">Lambda Expressions</span></span>](../programming-guide/language-features/procedures/lambda-expressions.md)
