--- a/docs/visual-basic/misc/bc36660-bc36657.md
+++ b/docs/visual-basic/misc/bc36660-bc36657.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di<methodname>tipo nel metodo '' perché non vengono convertiti nello stesso tipo
+title: Impossibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo '<methodname>' perché non vengono convertiti nello stesso tipo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36660
@@ -10,23 +10,23 @@ helpviewer_keywords:
 - BC36660
 - BC36657
 ms.assetid: e80c5afd-e16d-4f03-bdf1-c79c4286114b
-ms.openlocfilehash: f353b2be10e22a2074e0b8f747851462db6bad9f
-ms.sourcegitcommit: f20dd18dbcf2275513281f5d9ad7ece6a62644b4
+ms.openlocfilehash: 46b3fa33f1ea14389d407e221a3481973f3a3dc7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/30/2019
-ms.locfileid: "68631020"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398630"
 ---
-# <a name="data-types-of-the-type-parameters-in-method-methodname-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a><span data-ttu-id="4e9b7-102">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di\<tipo nel metodo ' methodName >' perché non vengono convertiti nello stesso tipo</span><span class="sxs-lookup"><span data-stu-id="4e9b7-102">Data type(s) of the type parameter(s) in method '\<methodname>' cannot be inferred from these arguments because they do not convert to the same type</span></span>
+# <a name="data-types-of-the-type-parameters-in-method-methodname-cannot-be-inferred-from-these-arguments-because-they-do-not-convert-to-the-same-type"></a><span data-ttu-id="bc1c6-102">Impossibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo '\<methodname>' perché non vengono convertiti nello stesso tipo</span><span class="sxs-lookup"><span data-stu-id="bc1c6-102">Data type(s) of the type parameter(s) in method '\<methodname>' cannot be inferred from these arguments because they do not convert to the same type</span></span>
 
-<span data-ttu-id="4e9b7-103">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di\<tipo nel metodo ' methodName >' perché non vengono convertiti nello stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="4e9b7-103">Data type(s) of the type parameter(s) in method '\<methodname>' cannot be inferred from these arguments because they do not convert to the same type.</span></span> <span data-ttu-id="4e9b7-104">Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.</span><span class="sxs-lookup"><span data-stu-id="4e9b7-104">Specifying the data type(s) explicitly might correct this error.</span></span>
+<span data-ttu-id="bc1c6-103">Non è possibile dedurre da questi argomenti i tipi di dati dei parametri di tipo nel metodo ' \<methodname> ' perché non vengono convertiti nello stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="bc1c6-103">Data type(s) of the type parameter(s) in method '\<methodname>' cannot be inferred from these arguments because they do not convert to the same type.</span></span> <span data-ttu-id="bc1c6-104">Per correggere l'errore, provare a specificare i tipi di dati in modo esplicito.</span><span class="sxs-lookup"><span data-stu-id="bc1c6-104">Specifying the data type(s) explicitly might correct this error.</span></span>
 
-<span data-ttu-id="4e9b7-105">Si è provato a usare l'inferenza del tipo per determinare il tipo o i tipi di dati del parametro o dei parametri di tipo durante la valutazione di una chiamata a una routine generica.</span><span class="sxs-lookup"><span data-stu-id="4e9b7-105">An attempt has been made to use type inference to determine the data type or types of the type parameter or parameters when evaluating a call to a generic procedure.</span></span> <span data-ttu-id="4e9b7-106">Il compilatore non ha trovato un tipo di dati che soddisfi i vincoli di tutti gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="4e9b7-106">The compiler could not find a data type that meets the constraints of all the arguments.</span></span> <span data-ttu-id="4e9b7-107">Di conseguenza, ha segnalato questo errore.</span><span class="sxs-lookup"><span data-stu-id="4e9b7-107">Therefore, it reported this error.</span></span>
+<span data-ttu-id="bc1c6-105">Si è provato a usare l'inferenza del tipo per determinare il tipo o i tipi di dati del parametro o dei parametri di tipo durante la valutazione di una chiamata a una routine generica.</span><span class="sxs-lookup"><span data-stu-id="bc1c6-105">An attempt has been made to use type inference to determine the data type or types of the type parameter or parameters when evaluating a call to a generic procedure.</span></span> <span data-ttu-id="bc1c6-106">Il compilatore non ha trovato un tipo di dati che soddisfi i vincoli di tutti gli argomenti.</span><span class="sxs-lookup"><span data-stu-id="bc1c6-106">The compiler could not find a data type that meets the constraints of all the arguments.</span></span> <span data-ttu-id="bc1c6-107">Di conseguenza, ha segnalato questo errore.</span><span class="sxs-lookup"><span data-stu-id="bc1c6-107">Therefore, it reported this error.</span></span>
 
 > [!NOTE]
-> <span data-ttu-id="4e9b7-108">Quando non è possibile specificare gli argomenti (ad esempio per gli operatori di query nelle espressioni di query), il messaggio di errore visualizzato non contiene la seconda frase.</span><span class="sxs-lookup"><span data-stu-id="4e9b7-108">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>
+> <span data-ttu-id="bc1c6-108">Quando non è possibile specificare gli argomenti (ad esempio per gli operatori di query nelle espressioni di query), il messaggio di errore visualizzato non contiene la seconda frase.</span><span class="sxs-lookup"><span data-stu-id="bc1c6-108">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>
 
-<span data-ttu-id="4e9b7-109">Il codice seguente illustra l'errore.</span><span class="sxs-lookup"><span data-stu-id="4e9b7-109">The following code demonstrates the error.</span></span>
+<span data-ttu-id="bc1c6-109">Il codice seguente illustra l'errore.</span><span class="sxs-lookup"><span data-stu-id="bc1c6-109">The following code demonstrates the error.</span></span>
 
 ```vb
 Option Strict Off
@@ -44,25 +44,25 @@ Module Module1
 End Module
 ```
 
-<span data-ttu-id="4e9b7-110">**ID errore:** BC36660 e BC36657</span><span class="sxs-lookup"><span data-stu-id="4e9b7-110">**Error ID:** BC36660 and BC36657</span></span>
+<span data-ttu-id="bc1c6-110">**ID errore:** BC36660 e BC36657</span><span class="sxs-lookup"><span data-stu-id="bc1c6-110">**Error ID:** BC36660 and BC36657</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="4e9b7-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4e9b7-111">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="bc1c6-111">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bc1c6-111">To correct this error</span></span>
 
-- <span data-ttu-id="4e9b7-112">Può essere possibile convertire uno o più argomenti in modo esplicito in un tipo compatibile, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="4e9b7-112">You may be able to convert one or more arguments explicitly to a compatible type, as shown in the following code:</span></span>
+- <span data-ttu-id="bc1c6-112">Può essere possibile convertire uno o più argomenti in modo esplicito in un tipo compatibile, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="bc1c6-112">You may be able to convert one or more arguments explicitly to a compatible type, as shown in the following code:</span></span>
 
   ```vb
   targetMethod(19, #3/4/2007#.ToOADate)
   ```
 
-- <span data-ttu-id="4e9b7-113">Può essere possibile specificare un tipo di dati per il parametro o i parametri di tipo in cui vengono convertiti gli argomenti, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="4e9b7-113">You may be able to specify a data type for the type parameter or parameters to which the arguments convert, as shown in the following code:</span></span>
+- <span data-ttu-id="bc1c6-113">Può essere possibile specificare un tipo di dati per il parametro o i parametri di tipo in cui vengono convertiti gli argomenti, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="bc1c6-113">You may be able to specify a data type for the type parameter or parameters to which the arguments convert, as shown in the following code:</span></span>
 
   ```vb
   targetMethod(Of String)(19, #3/4/2007#)
   ```
 
-## <a name="see-also"></a><span data-ttu-id="4e9b7-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4e9b7-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="bc1c6-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bc1c6-114">See also</span></span>
 
-- [<span data-ttu-id="4e9b7-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4e9b7-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [<span data-ttu-id="4e9b7-116">Funzioni di conversione del tipo</span><span class="sxs-lookup"><span data-stu-id="4e9b7-116">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
-- [<span data-ttu-id="4e9b7-117">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="4e9b7-117">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [<span data-ttu-id="4e9b7-118">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4e9b7-118">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [<span data-ttu-id="bc1c6-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="bc1c6-115">Generic Procedures in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="bc1c6-116">CString</span><span class="sxs-lookup"><span data-stu-id="bc1c6-116">Type Conversion Functions</span></span>](../language-reference/functions/type-conversion-functions.md)
+- [<span data-ttu-id="bc1c6-117">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="bc1c6-117">Implicit and Explicit Conversions</span></span>](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [<span data-ttu-id="bc1c6-118">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="bc1c6-118">Type Conversions in Visual Basic</span></span>](../programming-guide/language-features/data-types/type-conversions.md)
