--- a/docs/visual-basic/misc/bc40050.md
+++ b/docs/visual-basic/misc/bc40050.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo delegato '<delegatename>'dell'evento'<eventname>' non è conforme a CLS
+title: Il tipo delegato '<delegatename>' dell'evento '<eventname>' non è conforme a CLS
 ms.date: 07/20/2015
 f1_keywords:
 - bc40050
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC40050
 ms.assetid: 92f5be26-9a82-46d4-bf97-005f2c7ca424
-ms.openlocfilehash: bc9dd8798726961061565f20141a5f0c7533e704
-ms.sourcegitcommit: 8699383914c24a0df033393f55db3369db728a7b
+ms.openlocfilehash: 15d8de3c91b4d5409b346c9952b5a6a51fc65e01
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/15/2019
-ms.locfileid: "65640644"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84400952"
 ---
-# <a name="delegate-type-delegatename-of-event-eventname-is-not-cls-compliant"></a><span data-ttu-id="fb317-102">Tipo delegato '\<NomeDelegato >' dell'evento '\<NomeEvento >' non è conforme a CLS</span><span class="sxs-lookup"><span data-stu-id="fb317-102">Delegate type '\<delegatename>' of event '\<eventname>' is not CLS-compliant</span></span>
-<span data-ttu-id="fb317-103">Un' [Event Statement](../../visual-basic/language-reference/statements/event-statement.md) usa un delegato per specificare la sua firma, ma l' [Delegate Statement](../../visual-basic/language-reference/statements/delegate-statement.md) è contrassegnata come `<CLSCompliant(False)>` o non è contrassegnata.</span><span class="sxs-lookup"><span data-stu-id="fb317-103">An [Event Statement](../../visual-basic/language-reference/statements/event-statement.md) uses a delegate to specify its signature, but the [Delegate Statement](../../visual-basic/language-reference/statements/delegate-statement.md) is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
+# <a name="delegate-type-delegatename-of-event-eventname-is-not-cls-compliant"></a><span data-ttu-id="0ce58-102">Il tipo delegato '\<delegatename>' dell'evento '\<eventname>' non è conforme a CLS</span><span class="sxs-lookup"><span data-stu-id="0ce58-102">Delegate type '\<delegatename>' of event '\<eventname>' is not CLS-compliant</span></span>
+<span data-ttu-id="0ce58-103">Un' [Event Statement](../language-reference/statements/event-statement.md) usa un delegato per specificare la sua firma, ma l' [Delegate Statement](../language-reference/statements/delegate-statement.md) è contrassegnata come `<CLSCompliant(False)>` o non è contrassegnata.</span><span class="sxs-lookup"><span data-stu-id="0ce58-103">An [Event Statement](../language-reference/statements/event-statement.md) uses a delegate to specify its signature, but the [Delegate Statement](../language-reference/statements/delegate-statement.md) is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
   
- <span data-ttu-id="fb317-104">Quando l'attributo <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="fb317-104">When you apply the <xref:System.CLSCompliantAttribute> attribute to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="fb317-105">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="fb317-105">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="0ce58-104">Quando l'attributo <xref:System.CLSCompliantAttribute> viene applicato a un elemento di programmazione, il parametro `isCompliant` dell'attributo viene impostato su `True` o `False` per indicare la conformità o la non conformità.</span><span class="sxs-lookup"><span data-stu-id="0ce58-104">When you apply the <xref:System.CLSCompliantAttribute> attribute to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="0ce58-105">L'impostazione predefinita per questo parametro non è disponibile, quindi è necessario specificare un valore.</span><span class="sxs-lookup"><span data-stu-id="0ce58-105">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="fb317-106">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="fb317-106">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="0ce58-106">Se a un elemento non viene applicato <xref:System.CLSCompliantAttribute> , l'elemento non sarà considerato conforme.</span><span class="sxs-lookup"><span data-stu-id="0ce58-106">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="fb317-107">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="fb317-107">By default, this message is a warning.</span></span> <span data-ttu-id="fb317-108">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="fb317-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="0ce58-107">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="0ce58-107">By default, this message is a warning.</span></span> <span data-ttu-id="0ce58-108">Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="0ce58-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="fb317-109">**ID errore:** BC40050</span><span class="sxs-lookup"><span data-stu-id="fb317-109">**Error ID:** BC40050</span></span>  
+ <span data-ttu-id="0ce58-109">**ID errore:** BC40050</span><span class="sxs-lookup"><span data-stu-id="0ce58-109">**Error ID:** BC40050</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fb317-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fb317-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0ce58-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0ce58-110">To correct this error</span></span>  
   
-- <span data-ttu-id="fb317-111">Se è richiesta la conformità a CLS e si ha il controllo sulla definizione del delegato, applicare <xref:System.CLSCompliantAttribute> alla sua dichiarazione per contrassegnarlo come `<CLSCompliant(True)>`.</span><span class="sxs-lookup"><span data-stu-id="fb317-111">If you require CLS compliance and have control over the definition of the delegate, apply <xref:System.CLSCompliantAttribute> to its declaration to mark it as `<CLSCompliant(True)>`.</span></span>  
+- <span data-ttu-id="0ce58-111">Se è richiesta la conformità a CLS e si ha il controllo sulla definizione del delegato, applicare <xref:System.CLSCompliantAttribute> alla sua dichiarazione per contrassegnarlo come `<CLSCompliant(True)>`.</span><span class="sxs-lookup"><span data-stu-id="0ce58-111">If you require CLS compliance and have control over the definition of the delegate, apply <xref:System.CLSCompliantAttribute> to its declaration to mark it as `<CLSCompliant(True)>`.</span></span>  
   
-- <span data-ttu-id="fb317-112">Se non si ha il controllo sulla definizione del delegato o non è possibile contrassegnarlo come conforme, rimuovere l'attributo <xref:System.CLSCompliantAttribute> dall' `Event` o contrassegnarlo come `<CLSCompliant(False)>`.</span><span class="sxs-lookup"><span data-stu-id="fb317-112">If you do not have control over the definition of the delegate or cannot mark it as compliant, remove the <xref:System.CLSCompliantAttribute> from the `Event` statement or mark it as `<CLSCompliant(False)>`.</span></span>
+- <span data-ttu-id="0ce58-112">Se non si ha il controllo sulla definizione del delegato o non è possibile contrassegnarlo come conforme, rimuovere l'attributo <xref:System.CLSCompliantAttribute> dall' `Event` o contrassegnarlo come `<CLSCompliant(False)>`.</span><span class="sxs-lookup"><span data-stu-id="0ce58-112">If you do not have control over the definition of the delegate or cannot mark it as compliant, remove the <xref:System.CLSCompliantAttribute> from the `Event` statement or mark it as `<CLSCompliant(False)>`.</span></span>
